--- a/ok/ya/ya02-0.52.0.0.0.md
+++ b/ok/ya/ya02-0.52.0.0.0.md
@@ -1,6 +1,6 @@
 ## 2.52 罗天益治心悸案
 
-至元庚辰①六月中，许伯威五旬有四，中气本弱，病伤寒，九日。医者见其热甚，以凉剂下之，又食梨三、四枚。伤脾胃，四肢冷，时昏愦，请予治之。诊其脉动而中止，有时自还，乃结脉也。亦心动悸，呃噫不绝，色青黄，精神减少，目不欲开，倦卧恶人语，予以炙[甘草](https://www.gmzyjc.com/read/bc/bc17-0.1.8.0.0.md)汤②治之。成无己云：补可去弱，[人参](https://www.gmzyjc.com/read/bc/bc17-0.1.1.0.0.md)、[大枣](https://www.gmzyjc.com/read/bc/bc17-0.1.9.0.0.md)甘补不足之气，[桂枝](https://www.gmzyjc.com/read/bc/bc01-1.1.2.0.0.md)、[生姜](https://www.gmzyjc.com/read/bc/bc01-1.1.13.0.0.md)、辛益正气；五脏痿弱，荣正涸流，湿以润之，麻仁、[阿胶](https://www.gmzyjc.com/read/bc/bc17-0.3.5.0.0.md)、[麦门冬](https://www.gmzyjc.com/read/bc/bc17-0.4.2.0.0.md)、地黄之甘，润经益血，复脉通心；加[桂枝](https://www.gmzyjc.com/read/bc/bc01-1.1.2.0.0.md)、[人参](https://www.gmzyjc.com/read/bc/bc17-0.1.1.0.0.md)、急扶正气；减[生地黄](https://www.gmzyjc.com/read/bc/bc03-0.3.2.0.0.md)，恐损阳气。到一两服之，不效。予再思脉病对，莫非药陈腐而不效乎！再于市铺选尝气味厚者，再煎服之，其病减半，再服而愈。
+至元庚辰①六月中，许伯威五旬有四，中气本弱，病伤寒，九日。医者见其热甚，以凉剂下之，又食梨三、四枚。伤脾胃，四肢冷，时昏愦，请予治之。诊其脉动而中止，有时自还，乃结脉也。亦心动悸，呃噫不绝，色青黄，精神减少，目不欲开，倦卧恶人语，予以炙[甘草](https://www.gmzyjc.com/read/bc/bc17-0.1.8.0.0.md)汤②治之。成无己云：补可去弱，[人参](https://www.gmzyjc.com/read/bc/bc17-0.1.1.0.0.md)、[大枣](https://www.gmzyjc.com/read/bc/bc17-0.1.9.0.0.md)甘补不足之气，[桂枝](https://www.gmzyjc.com/read/bc/bc01-1.1.2.0.0.md)、[生姜](https://www.gmzyjc.com/read/bc/bc01-1.1.13.0.0.md)、辛益正气；五脏痿弱，荣正涸流，湿以润之，麻仁、[阿胶](https://www.gmzyjc.com/read/bc/bc17-0.3.5.0.0.md)、[麦门冬](https://www.gmzyjc.com/read/bc/bc17-0.4.2.0.0.md)、地黄之甘，润经益血，复脉通心；加[桂枝](https://www.gmzyjc.com/read/bc/bc01-1.1.2.0.0.md)、[人参](https://www.gmzyjc.com/read/bc/bc17-0.1.1.0.0.md)、急扶正气；减[生地黄](https://www.gmzyjc.com/read/bc/bc03-0.3.2.0.0.md)，恐损阳气。剉一两服之，不效。予再思脉病对，莫非药陈腐而不效乎！再于市铺选尝气味厚者，再煎服之，其病减半，再服而愈。
 
 （《卫生宝鉴》卷二十一）
 
