--- a/ok/qs/qs04.md
+++ b/ok/qs/qs04.md
@@ -166,7 +166,7 @@
 
 手少阴心经，从心中开始，出来属于心脏与它脏相连的系带脉络，下过膈肌，络小肠。
 
-它的支脉，从心脏的系带部向上挟咽喉，而与眼球内连于脑的系带脉络相联系。它的直行脉从心系上行至肺，向下出于腋下，沿上鼻内侧后缘，走手太阴、手厥阴经之后，下向肘内，沿前臂内侧后缘，到掌后豌豆骨部进入掌内后边，沿小指的挠侧出于末端。
+它的支脉，从心脏的系带部向上挟咽喉，而与眼球内连于脑的系带脉络相联系。它的直行脉从心系上行至肺，向下出于腋下，沿上鼻内侧后缘，走手太阴、手厥阴经之后，下向肘内，沿前臂内侧后缘，到掌后豌豆骨部进入掌内后边，沿小指的桡侧出于末端。
 
 此经少血多气。有了异常变动就表现为咽喉干燥，心口痛，目黄，胁肋痛，渴欲饮水，上臂、前臂内侧后边痛，手掌心热痛等。
 
@@ -192,7 +192,7 @@
 
 **颈颔肩臑肘臂痛，此经少气而多血。**
 
-**嗌** yi，读益，指咽喉。**䪼**  zhuo，读拙，眼眶的下方，包括颧骨内连及上牙床的部位  **颔** han,读含，栺?下结喉上两侧软肉部分。
+**嗌** yì，读益，指咽喉。**䪼**  zhuō，读拙，眼眶的下方，包括颧骨内连及上牙床的部位  **颔** hàn,读含，栺?下结喉上两侧软肉部分。
 
 手太阳小肠经：从小指外侧末端少泽穴开始，沿手掌尺侧，上向腕部，出尺骨小头部（踝中），直上沿尺骨下边，出于肘内侧当肱骨内上髁和尺骨鹰嘴之间，向上沿上臂外后侧，出肩关节部，绕肩胛，交会肩上，进入缺盆，络于心，沿食管，通过膈肌到胃，属于小肠。
 
@@ -208,7 +208,7 @@
 
 **还出下项循肩膊，挟脊抵腰循膂旋，**
 
-**络肾正属膀胱府，一支贯臀入胭传，**
+**络肾正属膀胱府，一支贯臀入腘传，**
 
 **一支从膊别贯胛，挟脊循髀合腘行，**
 
@@ -222,9 +222,9 @@
 
 **囟项眦腰尻腘腨，病若动时皆痛彻。**
 
-**交巔**  “交”，交会之意；  “巔”指头顶正中最高点，当百会穴处。  **膂**  lv，读旅，脊两旁的肌肉。**腘** guo，读国，挟膝后腘窝中间。 **囟** xin，读信，即囟门部。
+**交巔**  “交”，交会之意；  “巔”指头顶正中最高点，当百会穴处。  **膂**  lǚ ，读旅，脊两旁的肌肉。**腘** guó，读国，挟膝后腘窝中间。 **囟** xìn，读信，即囟门部。
 
-**臀** tun，读呑（阳平），人体后面两股的上端和腰相接的部分。
+**臀** tún，读呑（阳平），人体后面两股的上端和腰相接的部分。
 
 足太阳膀胱经：从内眼角开始，上行额部，交会于头顶。它的支脉，从头顶分出到耳上角。其直行主干，从头顶入内络于脑，复出项部分开下行：一支沿肩胛内侧，夹脊旁，到达腰中，进入脊旁筋肉，络于肾，属于膀胱。另一支从腰中分出，夹脊旁，通过臀部，进入胭窝中。
 
@@ -286,7 +286,7 @@
 
 **是主脉所生病者，掌热心烦心痛掣。**
 
-**支满**  支撑胀满的感觉。   **憺** dan，读淡，形容心悸不安状。**主脉**   诸脉皆属于心，心包络是心的外卫，代心受邪，故主脉所生病。
+**支满**  支撑胀满的感觉。   **憺** dàn，读淡，形容心悸不安状。**主脉**   诸脉皆属于心，心包络是心的外卫，代心受邪，故主脉所生病。
 
 手厥阴心包经：包络为心之外卫，三焦为脏腑之外卫，故为脏腑而相络。心包经从胸中开始，浅出属于心包，通过膈肌，经历胸部、上腹和下腹，络于三焦。
 
@@ -366,9 +366,9 @@
 
 **外辅**    指腓骨。**太息**     即叹气，频频叹气，称“善太息”。
 
-**面尘**     形容面色灰暗，如蒙灰尘。**瘿**    yjng，读英，颈部的肿物。侠瘿即瘰疬。**绝骨**    指腓骨的下段低凹处。
+**面尘**     形容面色灰暗，如蒙灰尘。**瘿**    yǐng，读英，颈部的肿物。侠瘿即瘰疬。**绝骨**    指腓骨的下段低凹处。
 
-足少阳胆经：从外眼角幵始，上行到额角，下耳后，沿颈旁，行手少昭三焦经之前，至肩上退后，交出手少阳三焦经之后，进入缺盆。
+足少阳胆经：从外眼角开始，上行到额角，下耳后，沿颈旁，行手少昭三焦经之前，至肩上退后，交出手少阳三焦经之后，进入缺盆。
 
 它的支脉：从耳后进入耳中，走耳前，至外眼角后，另一支脉从外眼角分出，下向大如(穴名），会合手少阳三焦经至眼下，下边盖过颊车（下颌角），下行颈部，会合于缺盆。由此下向胸中，通过膈肌，络于肝，属于胆，沿胁里，出于气街（腹股沟动脉处)，绕阴部毛际，横向进入腹关节部。
 
