--- a/ok/qs/qs01_04.md
+++ b/ok/qs/qs01_04.md
@@ -266,7 +266,7 @@
 
 **肺痈**   肺部发生痈疡、咳唾脓血的病症。   **肺痿**   阴虚肺伤的慢性衰弱性疾患。   **肠痈**    湿热留注肠中，气滯血淤，发为痈疡所致的疾患。   **痈疽**   yōng jū，读拥居，肿疡   表现为红肿高起，焮热疼痛，周围界限清楚，在未成脓之前无疮头而易消散，已成脓易溃破，溃后脓液稠粘，疮口易收敛的为痈；凡疮疡表现为漫肿平塌，皮色不变，不热少痛，未成脓难消，已成脓难溃，脓水清稀，破后难敛的为疸。
 
-痈疽未溃破时见到脉洪大为顺，等到溃破了以后脉还见洪大为逆。寸脉侯肺，肺痈病人的寸脉以数而实为顺，肺痿是阴虚肺伤，所以脉应以数而无力为顺。痈疽部位的皮肤颜色稍白时，为气血凝滞所致，脉象以短涩为顺，如果脉见数大而重按无力，则多为气血虚损。肠痈为实热所致，脉以滑数为顺，如果出现了沉细无根的败脉，则为邪盛正虚，难以治愈，多为逆证。
+痈疽未溃破时见到脉洪大为顺，等到溃破了以后脉还见洪大为逆。寸脉侯肺，肺痈病人的寸脉以数而实为顺，肺瘘是阴虚肺伤，所以脉应以数而无力为顺。痈疽部位的皮肤颜色稍白时，为气血凝滞所致，脉象以短涩为顺，如果脉见数大而重按无力，则多为气血虚损。肠痈为实热所致，脉以滑数为顺，如果出现了沉细无根的败脉，则为邪盛正虚，难以治愈，多为逆证。
 
 **28.妇人有子，阴搏阳别，少阴动甚，其胎已结。**
 
@@ -506,7 +506,7 @@
 
 数而如绞绳索，左右弹动不已为紧脉，数而时有歇止者为促脉，数脉独显于关部为动脉。
 
-数脉属阳主火热，治疗时可以用泻心火或泻命门之火的办法。数而有力为实热，治宜凉泻，数而无力为虚火上浮，治宜温补。肺燥阴虚疾患在深秋季节最忌见到数细无力之脉。寸部脉数多见于咽喉肿痛、口舌生疮，甚者咳嗽吐血、肺中脓疡。关部脉数为胃火内盛、肝火上炎。尺部脉数为下焦火热燔灼，要用滋阴降火的方剂（方剂很多，以生地、知母、黄柏、丹皮等为主药）进行治疗。
+数脉属阳主火热，治疗时可以用泻心火或泻命门之火的办法。数而有力为实热，治宜凉泻，数而无力为虚火上浮，冶宜温补。肺燥阴虚疾患在深秋季节最忌见到数细无力之脉。寸部脉数多见于咽喉肿痛、口舌生疮，甚者咳嗽吐血、肺中脓疡。关部脉数为胃火内盛、肝火上炎。尺部脉数为下焦火热燔灼，要用滋阴降火的方剂（方剂很多，以生地、知母、黄柏、丹皮等为主药）进行治疗。
 
 **【滑脉】**
 
@@ -742,7 +742,7 @@
 
 **人迎**本为结喉旁两侧颈总动脉搏动处，此处为左手寸部脉的别称。**气口**本指寸口，此为右手寸部脉的别称。
 
-奔豚tun，读屯，古病名，为五积之一，属肾积。豚即小猪。
+奔豚tún，读屯，古病名，为五积之一，属肾积。豚即小猪。
 
 **奔豚一由于肾脏寒气上冲，一由于肝脏气火上逆，临床特点为下腹气上冲胸，脐下悸动，气上冲咽喉，胸腹疼痛。**
 
@@ -954,7 +954,7 @@
 
 ​                 **尺逢定是丹田冷，泄痢遗精号脱阴。**
 
-**累累**连接成串。**萦萦**ying，〜，读迎，细长不断。**乖**不顺。
+**累累**连接成串。**萦萦**yíng，〜，读迎，细长不断。**乖**不顺。
 
 细脉的搏动连续不断，极细如丝，但举指重按沉取也能摸到。在春夏之季和青少年身上见到细脉为不正常的现象，因为春夏之季为阳气旺盛之时，青少年本气血旺盛，见到细脉则为脉时不符为逆。相反，在秋冬季节和老年体弱时见到细脉，这是脉时相符为顺。
 
