--- a/ok/qs/qs02.md
+++ b/ok/qs/qs02.md
@@ -58,7 +58,7 @@
 
 **黄连味苦，泻心除痞，清热明眸，厚肠止痢。**
 
-**眸**mau，读谋，瞳孔。 **厚肠** 增强肠胃功能。
+**眸**móu，读谋，瞳孔。 **厚肠** 增强肠胃功能。
 
 黄连味苦，性寒，功能清热燥湿，泻火解毒。用于心火炽盛的心烦不眠和热病躁烦、神昏谵语，肝火旺盛的目赤肿痛，肠胃湿热引起的腹泻、痢疾等证。此外，本品还常用于痈肿疮毒疔疖等外科病证。
 
@@ -96,7 +96,7 @@
 
 **大黄苦寒，实热积聚，蠲痰逐水，疏通便闭。**
 
-**蠲**juan，读捐，除去。
+**蠲**juān，读捐，除去。
 
 大黄味苦，性寒，属于寒性泻下药，功能疏导肠胃、通便去结、除痰逐水。可治疗肠胃实热积聚引起的热结便秘和痰水停留引起的水肿喘满。此外，本品还有清热解毒、祛淤通经等功效。
 
@@ -134,7 +134,7 @@
 
 **防风甘温，能除头晕，骨节痹疼，诸风口噤。**
 
-**噤**jin，读劲，口不能开。
+**噤**jìn，读劲，口不能开。
 
 防风味辛甘，性微温，功能袪风解表，散寒除湿，止痛解痉。能治疗风寒感冒的头痛头晕，风湿关节疼痛（痹证），以及因风邪引起的牙关紧闭、口不能开，头项强直、四肢抽搐等。
 
