--- a/ok/gk/gk04-0.3.1.0.0.md
+++ b/ok/gk/gk04-0.3.1.0.0.md
@@ -6,7 +6,7 @@
 
 1.原理：骨折复位后，由于肌肉收缩，肢体的重力及其他原因，可引起骨折端的再移位。为了防止再移位或纠正残留移位，为骨折愈合创造条件，所以需要固定。夹板局部外固定是一种能动的固定形式，它是通过：布带对夹板的约束力；夹板对伤肢的杠杆力；纸压垫对骨折端的效应力，来维持骨折复位效果；并充分利用肢体肌肉协调活动时所产生的内在动力，使肢体内部动力因骨折所致的不平衡重新恢复到平衡。
 
-2.夹板制作：夹板采用具有弹性、韧性、可塑性的木板（柳木、麻柳、榆木等）、树皮、竹片、纸板等，材料应因地制宜，就地取材。现以木板、竹片为例，介绍不同部位夹板的式样及规格。夹板要光滑，与肢体接触一面应衬有棉花、驼绒或毛毡等软物。木板、竹板厚度约0.3〜0.4厘米。
+2.夹板制作：夹板采用具有弹性、韧性、可塑性的木板（柳木、麻柳、榆木等）、树皮、竹片、纸板等，材料应因地制宜，就地取材。现以木板、竹片为例，介绍不同部位夹板的式样及规格。夹板要光滑，与肢体接触一面应衬有棉花、驼绒或毛毡等软物。木板、竹板厚度约0.3~0.4厘米。
 
 （1）前臂桡骨远端骨折外固定夹板（图4-23）。
 
@@ -48,7 +48,7 @@
 
 （3）放夹板。按照夹板的固定位置，分先后放置，由一助手扶持固定。
 
-（4）捆扎布带。用3条或4条布带（1.5厘米〜2厘米宽市面买的）捆扎夹板，先捆中间两道，后捆扎二端。要求扎蝴蝶结，这样既结实又美观。布带松紧要合适，以能上下移动1厘米为度。
+（4）捆扎布带。用3条或4条布带（1.5厘米~2厘米宽市面买的）捆扎夹板，先捆中间两道，后捆扎二端。要求扎蝴蝶结，这样既结实又美观。布带松紧要合适，以能上下移动1厘米为度。
 
 4.固定后的注意事项：
 
@@ -56,13 +56,13 @@
 
 （2）固定后检查肢端血运情况，如指、趾端发冷，呈紫色，或触痛等，是缺血挛缩的前驱症状。要及时放松布带，以免造成肢体缺血坏死。
 
-（3）复位固定后，第二天要复查，以后1〜3天复查一次，三次后改5〜7天复査一次，但如有病情变化，嘱病人随时复诊。
+（3）复位固定后，第二天要复查，以后1~3天复查一次，三次后改5~7天复査一次，但如有病情变化，嘱病人随时复诊。
 
 （4）骨折固定后，肢体应放在肢体恢复功能的体位为宜。固定后患肢应适当抬高，冬天要注意伤肢的保暖。
 
-（二）石膏固定 石膏为含水硫酸钙（CaSO4H2O生石膏）经煅制而成的白色粉末。吸水后可变成结晶石膏而凝固塑形，临床即用此特性进行固定。现临床应用是在医药商店售的石膏绷带，规格有：15厘米×500厘米、10厘米×500厘米、7厘米×300厘米三种。用温水浸至无泡时使用，固定5—7分钟后即可成形。成形后不再发生紧缩或扩张，故能使肢体保持所需固定位置。
+（二）石膏固定 石膏为含水硫酸钙（CaSO<small>4</small>H<small>2</small>O生石膏）经煅制而成的白色粉末。吸水后可变成结晶石膏而凝固塑形，临床即用此特性进行固定。现临床应用是在医药商店售的石膏绷带，规格有：15厘米×500厘米、10厘米×500厘米、7厘米×300厘米三种。用温水浸至无泡时使用，固定5—7分钟后即可成形。成形后不再发生紧缩或扩张，故能使肢体保持所需固定位置。
 
-1.使用方法：先将患处皮肤洗净，剃除毛发，涂抹酒精后，洒上滑石粉，以防汗腻。患肢用软垫或棉垫覆盖，保护好各关节骨隆起处。准备完毕后，扶持肢体于需要位置，即可将石膏卷浸泡于温水内2〜3分钟，待无气泡后，用双手握其二端，提岀水面，由二端向中央轻轻挤压，排出多余水分。由肢体近端开始作环形或螺旋形缠绕，后一卷盖住前一层的三分之一，卷2〜3层后，即随时以手掌均匀用力轻轻按压涂抹，使各层均匀粘成一体。石膏绷带是贴上的而不是缠上的，所以缠时不要拉紧，使无皱褶即可。操作要迅速有序，否则先前的已硬化而后面的不易贴着。绕至二端接头将棉垫反折，再加石膏涂匀，使平坦美观。然后静止原位，待有相当硬度后再修正移动。一般石膏厚度以0.5～1厘米为佳，轻便易换。可根据需要加用补充石膏带加固。石膏带的制作是选用适当宽窄的石膏卷，依所要长度反折成八至十层，然后向中间折叠，浸泡后平铺于木板上，以手掌加压抹平，贴于患处，外缠石膏绷带或普通绷带即可。
+1.使用方法：先将患处皮肤洗净，剃除毛发，涂抹酒精后，洒上滑石粉，以防汗腻。患肢用软垫或棉垫覆盖，保护好各关节骨隆起处。准备完毕后，扶持肢体于需要位置，即可将石膏卷浸泡于温水内2~3分钟，待无气泡后，用双手握其二端，提岀水面，由二端向中央轻轻挤压，排出多余水分。由肢体近端开始作环形或螺旋形缠绕，后一卷盖住前一层的三分之一，卷2~3层后，即随时以手掌均匀用力轻轻按压涂抹，使各层均匀粘成一体。石膏绷带是贴上的而不是缠上的，所以缠时不要拉紧，使无皱褶即可。操作要迅速有序，否则先前的已硬化而后面的不易贴着。绕至二端接头将棉垫反折，再加石膏涂匀，使平坦美观。然后静止原位，待有相当硬度后再修正移动。一般石膏厚度以0.5～1厘米为佳，轻便易换。可根据需要加用补充石膏带加固。石膏带的制作是选用适当宽窄的石膏卷，依所要长度反折成八至十层，然后向中间折叠，浸泡后平铺于木板上，以手掌加压抹平，贴于患处，外缠石膏绷带或普通绷带即可。
 
 2.石膏固定形式：石膏固定范围很广，常用的有石膏托、石膏夹板、石膏管型。两片石膏托合成为石膏夹板，多用于四肢骨折。石膏管型用于四肢，形成封闭性石膏管，固定效果较佳，但容易发生松动或过紧现象，并在某些情况下需要切开或更换。此外还有石膏领、石膏背心、肩人字石膏、髋人字石膏、石膏靴等，可随不同部位适当选用（图4-31）。
 
@@ -100,7 +100,7 @@
 
 1.器械牵引：多采用一些特制器械进行牵引。
 
-（1）枕颌带牵引：用毛巾或布带等制成，内层可衬海绵垫。病人取坐位、卧位均可。配合滑车应用，重量2〜4公斤，过重易压伤皮肤。牵引的时间，根据各病而有所差异。如骨折或脱位，需先纠正脱位或骨折，用颈围（石膏、皮革或其他材料做的均可）保护。适用于颈椎病牵引，每天1〜2次，每次20分钟左右。应用于颈椎骨折、脱位，也用于纠正斜颈及治疗颈椎病。（图4-32）。
+（1）枕颌带牵引：用毛巾或布带等制成，内层可衬海绵垫。病人取坐位、卧位均可。配合滑车应用，重量2~4公斤，过重易压伤皮肤。牵引的时间，根据各病而有所差异。如骨折或脱位，需先纠正脱位或骨折，用颈围（石膏、皮革或其他材料做的均可）保护。适用于颈椎病牵引，每天1~2次，每次20分钟左右。应用于颈椎骨折、脱位，也用于纠正斜颈及治疗颈椎病。（图4-32）。
 
 <img src="img\4-32.jpg" style="zoom:67%;" />
 
@@ -112,11 +112,11 @@
 
 <img src="img\4-34.jpg" style="zoom:67%;" />
 
-（4）腰椎牵引：用布制腰、胸带，分别固定住病人的骨盆和胸肋部，两边系绳，分别向头足反向牵引，牵引重量可达20〜40公斤。主要用于脊椎胸腰段压缩性骨折或脱位，以及腰椎间盘突出症。
+（4）腰椎牵引：用布制腰、胸带，分别固定住病人的骨盆和胸肋部，两边系绳，分别向头足反向牵引，牵引重量可达20~40公斤。主要用于脊椎胸腰段压缩性骨折或脱位，以及腰椎间盘突出症。
 
 2.皮牵引：是用胶布直接地贴附在皮肤上，使牵引力作用于皮肤，间接地牵引肌肉与骨骼，以维持骨折端稳定和延长肢体作用。重量在5公斤以下。过重则皮肤不能承受，易滑脱。常用于儿童及体质虚弱肌肉不发达者。不适用于开放性骨折及皮肤有损伤、感染、化脓等。
 
-（1）皮牵引的用具：宽胶布（5〜7厘米）一条，长度为骨折端至肢体末端10厘米，牵引关节侧自关节平面下计算，将一头撕（剪〉成三开，以扩大皮肤的粘着面积；6厘米的小方木板一块，厚约1厘米，中央钻一0.5〜0.6厘米孔，称分开板；纱布两卷，棉花适量，绳一条，滑轮一个，重锤适量。牵引架可利用牵引床的床头。
+（1）皮牵引的用具：宽胶布（5~7厘米）一条，长度为骨折端至肢体末端10厘米，牵引关节侧自关节平面下计算，将一头撕（剪〉成三开，以扩大皮肤的粘着面积；6厘米的小方木板一块，厚约1厘米，中央钻一0.5~0.6厘米孔，称分开板；纱布两卷，棉花适量，绳一条，滑轮一个，重锤适量。牵引架可利用牵引床的床头。
 
 （2）具体操作：将皮肤洗净擦干，在骨隆起处和关节部位加棉花垫保护。将备好的胶布分别贴于患肢两侧皮肤上，与肢体长轴平行。粘贴时不可交叉重迭，以手掌压牢，使无皱褶。禁止用胶布在肢体上螺旋缠绕，以防发生血运障碍。胶布绕过足心处，将撑开板贴在胶布中央，在板的圆孔处把胶布钻穿，将牵引绳穿入，绳端打结，防止滑脱。绳的另一端穿过滑轮系于重物（铁砝码）。肢体贴胶布处用绷带适当地、均匀地加压包扎。胶布近端应外露，以观察有无滑脱。
 
@@ -124,7 +124,7 @@
 
 <img src="img\4-35.jpg" style="zoom:80%;" />
 
-（3）小儿下肢悬吊或皮牵引（Bryant氏牵引）。适用于4岁以下小儿骰骨干骨折。牵引用胶布大小可根据患儿肢体来调整，牵引重物可用沙袋或砝码，重量以能将小儿臀部离床面2厘米左右为度。牵引时间一般21〜25天，骨折可愈合。因此在牵引期间要经常检查对位情况，必要时用夹板、纸压垫固定，以防畸形愈合（图4-36）。
+（3）小儿下肢悬吊或皮牵引（Bryant氏牵引）。适用于4岁以下小儿骰骨干骨折。牵引用胶布大小可根据患儿肢体来调整，牵引重物可用沙袋或砝码，重量以能将小儿臀部离床面2厘米左右为度。牵引时间一般21~25天，骨折可愈合。因此在牵引期间要经常检查对位情况，必要时用夹板、纸压垫固定，以防畸形愈合（图4-36）。
 
 <img src="img\4-36.jpg" style="zoom:67%;" />
 
@@ -134,7 +134,7 @@
 
 （1）用具准备：尖手术刀，骨圆针或克氏针，牵引弓，手钻，钳。消毒用具和牵引架、夹板、牵引绳、砝码（或重锤）等。
 
-（2）操作方法：打牵引针部位的皮肤消毒后，铺消毒布单或孔巾。穿针部位皮下注射麻药直至骨膜，将钢针与肢体长轴呈垂直方向端平钻入即可，针尖直达对侧皮下，见针尖顶起皮肤时，用手压皮肤，针尖即可穿出皮肤，针露出体外两侧等长，然后略退针少许，以防入针的皮肤向针孔内卷压；再用酒精纱布保护好两侧针眼，安装牵引弓。钢针两端适当剪短，断端用青霉素瓶套上，以防伤及他处；将患肢置于牵引架上进行牵引。其牵引重量根据需要决定，一般上肢2〜3公斤，下肢5〜8公斤。并可据情增或减。
+（2）操作方法：打牵引针部位的皮肤消毒后，铺消毒布单或孔巾。穿针部位皮下注射麻药直至骨膜，将钢针与肢体长轴呈垂直方向端平钻入即可，针尖直达对侧皮下，见针尖顶起皮肤时，用手压皮肤，针尖即可穿出皮肤，针露出体外两侧等长，然后略退针少许，以防入针的皮肤向针孔内卷压；再用酒精纱布保护好两侧针眼，安装牵引弓。钢针两端适当剪短，断端用青霉素瓶套上，以防伤及他处；将患肢置于牵引架上进行牵引。其牵引重量根据需要决定，一般上肢2~3公斤，下肢5~8公斤。并可据情增或减。
 
 （3）骨牵引适应症：
 
@@ -158,13 +158,13 @@
 
 | 牵引针                         | 穿针部位      | 入针方向与标志                                               | 牵引目的                                                     | 重量（成人）                        |
 | ------------------------------ | ------------- | ------------------------------------------------------------ | ------------------------------------------------------------ | ----------------------------------- |
-| 颅骨钳                         | 颅骨顶部      | 两外耳道联线与两眉弓外缘向顶部所画线交点处                   | 颈椎骨折脱位、颈椎病或痉挛性斜颈                             | 开始重量7～15公斤，维持重量4～5公斤 |
-| 克氏针<br />螺丝钩<br />手巾钳 | 尺骨鹰嘴突    | 由鹰嘴尖端向远侧1.5横指处与距皮缘1厘米画线交点处、由内向外，防止损伤尺神经 | 肱骨骨折，固定不稳的肱骨髁上骨折或局部明显肿胀和肱骨髁间骨折 | 开始重量2〜3公斤，维持重量1〜2公斤  |
-| 克氏针                         | 桡尺骨下端    | 桡骨茎突上3.5厘米处                                          | 桡尺骨干骨折和肘关节损伤或疾病                               | 开始重量2〜3公斤，维持重量1〜2公斤  |
-| 克氏针                         | 第2、3、4掌骨 | 横贯2〜3或2、3、4掌骨干由桡向尺侧穿针                        | 前臂双骨折<br />桡骨下端骨折<br />腕关节疾病                 | 开始重量2〜3公斤，维持重量1〜2公斤  |
+| 颅骨钳                         | 颅骨顶部      | 两外耳道联线与两眉弓外缘向顶部所画线交点处                   | 颈椎骨折脱位、颈椎病或痉挛性斜颈                             | 开始重量7~15公斤，维持重量4～5公斤 |
+| 克氏针<br />螺丝钩<br />手巾钳 | 尺骨鹰嘴突    | 由鹰嘴尖端向远侧1.5横指处与距皮缘1厘米画线交点处、由内向外，防止损伤尺神经 | 肱骨骨折，固定不稳的肱骨髁上骨折或局部明显肿胀和肱骨髁间骨折 | 开始重量2~3公斤，维持重量1~2公斤  |
+| 克氏针                         | 桡尺骨下端    | 桡骨茎突上3.5厘米处                                          | 桡尺骨干骨折和肘关节损伤或疾病                               | 开始重量2~3公斤，维持重量1~2公斤  |
+| 克氏针                         | 第2、3、4掌骨 | 横贯2~3或2、3、4掌骨干由桡向尺侧穿针                        | 前臂双骨折<br />桡骨下端骨折<br />腕关节疾病                 | 开始重量2~3公斤，维持重量1~2公斤  |
 | 克氏针                         | 指骨          | 指骨远节基底远侧                                             | 掌骨、指骨不稳定性骨折和掌指关节损伤与指间关节损伤           | 用手套边橡皮圈                      |
-| 克氏针<br />冰钳               | 股骨下端      | 髌骨上缘2厘米处或内收肌结节上二横指处由内向外，防止损伤血管。如用冰钳以内外髁中心为标志 | 股骨骨折、髋关节脱位、感染等                                 | 开始重量7〜8公斤，维持重量3〜5公斤  |
-| 克氏针<br />骨圆针             | 胫骨结节      | 胫骨结节向后一横指即1.25厘米处在其平面下部由外向内，避免损伤腓神经 | 股骨骨折，膝关节內骨折和髀关节脱位或疾病                     | 开始重量7〜8公斤，维持重量2〜5公斤  |
-| 克氏针<br />骨圆针             | 跟骨          | 外踝顶点下2厘米再向后2厘米垂直线的顶点处或内踝顶点下3厘米垂直线顶点处或自外踝顶点沿跟骨纵轴2横指 | 胫骨骨折、踝关节骨折脱位等                                   | 开始重量4〜9公斤，维持重量2〜3公斤  |
-| 克氏针                         | 第2、3、4跖骨 | 横贯1、2、3跖骨                                              | 跗跖关节脱位                                                 | 开始重量2〜3公斤，维持重量1〜2公斤  |
+| 克氏针<br />冰钳               | 股骨下端      | 髌骨上缘2厘米处或内收肌结节上二横指处由内向外，防止损伤血管。如用冰钳以内外髁中心为标志 | 股骨骨折、髋关节脱位、感染等                                 | 开始重量7~8公斤，维持重量3~5公斤  |
+| 克氏针<br />骨圆针             | 胫骨结节      | 胫骨结节向后一横指即1.25厘米处在其平面下部由外向内，避免损伤腓神经 | 股骨骨折，膝关节內骨折和髋关节脱位或疾病                     | 开始重量7~8公斤，维持重量2~5公斤  |
+| 克氏针<br />骨圆针             | 跟骨          | 外踝顶点下2厘米再向后2厘米垂直线的顶点处或内踝顶点下3厘米垂直线顶点处或自外踝顶点沿跟骨纵轴2横指 | 胫骨骨折、踝关节骨折脱位等                                   | 开始重量4~9公斤，维持重量2~3公斤  |
+| 克氏针                         | 第2、3、4跖骨 | 横贯1、2、3跖骨                                              | 跗跖关节脱位                                                 | 开始重量2~3公斤，维持重量1~2公斤  |
 | 克氏针                         | 趾骨          | 趾骨远节                                                     | 跗骨、跖骨骨折                                               | 用手套边橡皮圈                      |
