--- a/ok/gk/gk04-0.3.2.0.0.md
+++ b/ok/gk/gk04-0.3.2.0.0.md
@@ -42,7 +42,7 @@
 
 <img src="img\4-39.jpg" style="zoom:67%;" />
 
-选择髓内针时，其长度应以针尖能达到骨折线下8〜10厘米为度。如针短就起不到固定的作用，针长则不能完全进入髓腔。髓内针的粗细要适当，针细固定不牢，针粗有使骨质劈裂之虞，选择时髓内针要比X线照片的髓腔宽度窄2mm。术后不用外固定。
+选择髓内针时，其长度应以针尖能达到骨折线下8~10厘米为度。如针短就起不到固定的作用，针长则不能完全进入髓腔。髓内针的粗细要适当，针细固定不牢，针粗有使骨质劈裂之虞，选择时髓内针要比X线照片的髓腔宽度窄2mm。术后不用外固定。
 
 髓内针固定术可分为闭合性和开放性两种方法：
 
@@ -52,13 +52,13 @@
 
 顺行开放髓内针固定，则是先在骨折部位切口，在直视下手法复位，折端对位良好后，在肱骨大结节（股骨大粗隆）处切一小口，将该处骨质凿一小洞，V形髓针尖端放骨洞内，对准髓腔，针嵴向外，针槽向内，针尾套上嵌插器，用骨锤向髓腔内打入髓针并通过骨折线进入下骨折段的髓腔中，直至针尾有孔部分恰好留在骨外为止。用生理盐水冲洗切口、止血、缝合。
 
-（三）螺钉与钢丝内固定 螺钉与钢丝固定骨折，有单独使用，也常与钢板配合使用。在单独使用固定力弱，稳定性较差，应选好适应症。并多需配合适当的外固定。迖到临床愈合后，去除外固定。
+（三）螺钉与钢丝内固定 螺钉与钢丝固定骨折，有单独使用，也常与钢板配合使用。在单独使用固定力弱，稳定性较差，应选好适应症。并多需配合适当的外固定。达到临床愈合后，去除外固定。
 
 1.螺丝钉固定：多用于骨突部位的骨折，手法复位困难，外固定失败时。如常见的肱骨内、外髁骨折，尺骨鹰嘴骨折，股骨、胫骨的内、外髁骨折，肱骨大结节骨折等。
 
 长管状骨的长斜形、大螺旋形骨折，手法复位失败时，可切开用几个螺丝钉作内固定，如肱骨的骨折。
 
-一些部位的陈旧性脱位合并韧带完全断裂者，如肩锁关节、下胫膝关节皮。
+一些部位的陈旧性脱位合并韧带完全断裂者，如肩锁关节、下胫腓关节皮。
 
 2.钢丝内固定：只能做配合使用。如长管状骨折有较大骨折片时，在采取其它内固定的1小时，使用钢丝将易移位的骨片固定。
 
@@ -68,15 +68,15 @@
 
 （四）三翼钉内固定 三翼钉内固定有两种打法，一为闭合复位三翼钉内固定，一为开放三翼钉内固定，如有条件，应尽量釆用前者。此内固定法用于治疗股骨颈骨折较为理想，可避免病人长期卧床而引起的一系列并发症。
 
-1.闭合复位三翼钉内固定：术前2〜3天先行牵引复位。采用局麻或硬脊膜外麻醉后铺好消毒巾，自大粗隆上缘向下作一纵行约8厘米长的切口，按肌纤维分开股外肌直达股骨外侧。
+1.闭合复位三翼钉内固定：术前2~3天先行牵引复位。采用局麻或硬脊膜外麻醉后铺好消毒巾，自大粗隆上缘向下作一纵行约8厘米长的切口，按肌纤维分开股外肌直达股骨外侧。
 
-插入导针，在大粗隆基底部下2〜3厘米处切开骨膜，用圆凿凿成直径0.7厘米的骨洞，将带刻度的导针，用手钻由骨洞插入股骨颈直达股骨头内，一般可按不同方向插入2〜3根导针，以便选择较好位置的导针留作打三翼钉的引路针。导针插好后，照X线片检查，拔出不合适的导针，最好距正确导针旁0.5〜1厘米处再保留一根导针，并将其穿越股骨头固定于髋臼上，防止打三翼钉时股骨头发生旋转。
+插入导针，在大粗隆基底部下2~3厘米处切开骨膜，用圆凿凿成直径0.7厘米的骨洞，将带刻度的导针，用手钻由骨洞插入股骨颈直达股骨头内，一般可按不同方向插入2~3根导针，以便选择较好位置的导针留作打三翼钉的引路针。导针插好后，照X线片检查，拔出不合适的导针，最好距正确导针旁0.5~1厘米处再保留一根导针，并将其穿越股骨头固定于髋臼上，防止打三翼钉时股骨头发生旋转。
 
 打三翼钉：用三棱凿按三翼钉的三个翼预定进入骨质处，先凿开骨皮质，再把三翼钉安放在打入器头部的螺旋上，不偏不倚地套在导针上，用左手稳固地把住打入器，右手持锤慢慢地将其向股骨颈内打入。三翼钉前端应达股骨头关节面下0.5厘米，针尾留在骨皮质外0.5厘米，然后拔出导针，再用嵌插器将骨折两折端嵌紧。打入三翼钉后，应再摄X线片以了解固定情况。三翼钉的尾部在骨皮质外应为0.5厘米，尖端距股骨头缘应为0.5厘米。三翼钉的方向与股骨颈内倾角一致或稍大，骨折端紧密接触，即为固定良好。
 
 2.开放复位三翼钉内固定：适用于因条件所限，不能用闭合三翼钉内固定的股骨颈骨折者。此法是切开关节囊，在直视下进行复位，同时作内固定，在操作上比闭合复位简单，但易影响股骨颈的血循环，故在操作时要细致，以减少对骨折愈合的影响。
 
-釆用髋关节前侧或外侧切口，经阔筋膜张肌与臀中肌的间隙进入关节囊。在关节囊上作“T”形切口，不要过多地剥离关节囊，显露骨折部位即可。然后在大粗隆基底下2〜3厘米处，凿去0.6〜0.7厘米的骨皮质，用手钻将导针插入股骨颈内，使骨折正确复位，然后将导针正确插入股骨头，顺导针打入三翼钉，再用嵌插器使骨折端嵌插紧密。固定后，生理盐水冲洗关节腔，逐层缝合切口。
+釆用髋关节前侧或外侧切口，经阔筋膜张肌与臀中肌的间隙进入关节囊。在关节囊上作“T”形切口，不要过多地剥离关节囊，显露骨折部位即可。然后在大粗隆基底下2~3厘米处，凿去0.6~0.7厘米的骨皮质，用手钻将导针插入股骨颈内，使骨折正确复位，然后将导针正确插入股骨头，顺导针打入三翼钉，再用嵌插器使骨折端嵌插紧密。固定后，生理盐水冲洗关节腔，逐层缝合切口。
 
 （五）鹅头钉内固定 鹅头钉是弯颈接骨板用螺丝钉固定于三翼钉上，可根据骨板颈的角度来调节，故颈干角也可调节，患者可早期离床活动，本法多用于股骨颈基底部骨折、粗隆间骨折，主要有以下几种情况：
 
@@ -100,11 +100,11 @@
 
 2.术后除保持创口无菌外，应以抗菌素或中药（补气血、生肌长肉、清热解毒〉，服用1周，创口正常恢复即可停药。
 
-3.钢板内固定一般应在骨折后4〜6个月，骨折坚固愈合后取出钢板。
+3.钢板内固定一般应在骨折后4~6个月，骨折坚固愈合后取出钢板。
 
 4.使用V形髓内针时，无论顺行或逆行进针，针嵴一定朝外，否则针尖会长在对侧骨壁上以致影响进针和打裂骨皮质。
 
-5.打三翼钉时要防止股骨头旋转及钉上滑，或针尖超出股骨头钉入髓臼内。
+5.打三翼钉时要防止股骨头旋转及钉上滑，或针尖超出股骨头钉入髋臼内。
 
 6.手术操作用力要稳妥，循序渐进，遇到阻力不要强打。
 
