update ok/wk/wk01-1.0.0.0.0.md. 1. 标题去& 2. 痿改成瘘 3. 改标点2个。 https://www.gmzyjc.com/read/hdnjls/hdnjls77.html 4. 若疾发于内，针药能及者改成若疾发于内，针药“所不“能及者。 5. 者改成著

--- a/ok/wk/wk01-1.0.0.0.0.md
+++ b/ok/wk/wk01-1.0.0.0.0.md
@@ -1,4 +1,4 @@
-# 第一章 中医外科学的源流与发展&
+# 第一章 中医外科学的源流与发展
 
 〔自学时数〕2学时
 
@@ -14,17 +14,17 @@
 
 这些原始的清创、止血、排脓、药物外敷等是人类在长期同疾病作斗争中发展起来的，是最原始的、简单的“外科处理”。这便是中医外科的起源。
 
-远在公元前十四世纪左右殷商代的甲骨文中就有外科病名的记载，如疾自（鼻）、疾耳、疾止（趾）、疾舌、疾足、疕、疥等，这是我国有史以来有关外科的最早文字记录。《山海经•东山经》中说“高氏之山，……其下多箴石。”郭璞注：“砭针，治痈肿者”。该书还载有38种疾病，外科病有痈、疽，痹、瘿、痔、疥等。《周礼•天官》有疡医的记载，并规定疡医“掌肿疡、溃疡、金疡、折疡之祝药、劀杀之齐"。祝药就是敷药，劀是括去脓血，杀是腐蚀剂去恶肉或剪去恶肉。这些是我国最早应用手术方法和腐蚀性药物治疗疾病的记载。医学的具体分工，有力地推动了医学按门类深入的发展。马王堆汉墓出土帛书《五十二病方》系春秋时代作品，是我国现今发现最早的古医方。书中载有感染、创伤、冻疮、诸虫咬伤、痔痿、肿瘤、皮肤病等30多种外科疾病。在“疽病”下，有“骨疽倍白蔹，肉疽（倍）黄芪，肾疽倍芍药”之说，这样针对不同的疾病，更换药物，调整剂量，可视为"辨证论治”的萌芽。并以“水银、谷汁而傅（敷）之”治皮肤病；用醇酒止痛和消毒，如“犬所齧，令无痛及易瘳方：令〔齧〕者卧，而令人以酒，财沃其伤。”这是世界上最早将水银和酒用作药物的记录。此外还记录了治疗痔疮的具体方法，如用小绳结扎“牡痔”，用地胆等药外敷“牡痔”，用滑润的“铤”作为检查治疗漏管的探针等。这说明，当时已有较高的外科治疗水平。
+远在公元前十四世纪左右殷商代的甲骨文中就有外科病名的记载，如疾自（鼻）、疾耳、疾止（趾）、疾舌、疾足、疕、疥等，这是我国有史以来有关外科的最早文字记录。《山海经•东山经》中说“高氏之山，……其下多箴石。”郭璞注：“砭针，治痈肿者”。该书还载有38种疾病，外科病有痈、疽，痹、瘿、痔、疥等。《周礼•天官》有疡医的记载，并规定疡医“掌肿疡、溃疡、金疡、折疡之祝药、劀杀之齐"。祝药就是敷药，劀是括去脓血，杀是腐蚀剂去恶肉或剪去恶肉。这些是我国最早应用手术方法和腐蚀性药物治疗疾病的记载。医学的具体分工，有力地推动了医学按门类深入的发展。马王堆汉墓出土帛书《五十二病方》系春秋时代作品，是我国现今发现最早的古医方。书中载有感染、创伤、冻疮、诸虫咬伤、痔瘘、肿瘤、皮肤病等30多种外科疾病。在“疽病”下，有“骨疽倍白蔹，肉疽（倍）黄芪，肾疽倍芍药”之说，这样针对不同的疾病，更换药物，调整剂量，可视为"辨证论治”的萌芽。并以“水银、谷汁而傅（敷）之”治皮肤病；用醇酒止痛和消毒，如“犬所齧，令无痛及易瘳方：令〔齧〕者卧，而令人以酒，财沃其伤。”这是世界上最早将水银和酒用作药物的记录。此外还记录了治疗痔疮的具体方法，如用小绳结扎“牡痔”，用地胆等药外敷“牡痔”，用滑润的“铤”作为检查治疗漏管的探针等。这说明，当时已有较高的外科治疗水平。
 
 ### 二、形成
 
 中医外科有文字记载的资料很早，但渐具规模，形成一个学科，则是在汉代。就一般而言，在汉代外科学已经具备了以下条件：一有系统的理论体系；二有先进的哲学思想基础；三有代表人物；四有丰富的实践经验；五有继承和发扬的流派。
 
-那时已经传世的《内经》奠定了中医外科的理论基础，对外科病的病因病机有了初步的阐明。《灵枢•玉版》说：“病之生时，有喜怒不测，饮食不节，阴气不足，阳气有余，荣气不行，乃发痈疽”。《素问•生气通天论》：“膏粱之变，足生大丁……荣气不从，逆于肉理，乃生痈肿。”这些都是对病因的认识。《灵枢•刺节真邪论》：“虚邪之中人也，洒淅动形起毫毛而发腠理，其入深……则为痈”。这说明了外科感染的途径。《灵枢•痈疽》则是一篇完整的外科专论，对外科化脓性疾病的形成机理作了精辟的论述：“血脉营卫，周流不休，上应星宿，下应经数，寒邪客于经络之中则血泣，血泣则不通，不通则卫气归之，不得复反，故痈肿。寒气化为热，热胜则肉腐，肉腐则为脓。”这些理论直到今天仍然指导着外科的临床应用。此外，在治疗上，还记载了豕膏外敷、铍针放脓、斩刈死趾等治疗方法。《内经》中这些医学理论，基本上是在当时先进的哲学思想——古代的唯物辩证法——整体的动态的天人相应学说、阴阳五行学说、精气神学说指导下形成的。
+那时已经传世的《内经》奠定了中医外科的理论基础，对外科病的病因病机有了初步的阐明。《灵枢•玉版》说：“病之生时，有喜怒不测，饮食不节，阴气不足，阳气有余，荣气不行，乃发痈疽”。《素问•生气通天论》：“膏粱之变，足生大丁……荣气不从，逆于肉理，乃生痈肿。”这些都是对病因的认识。《灵枢•刺节真邪论》：“虚邪之中人也，洒淅动形，起毫毛而发腠理。其入深……则为痈”。这说明了外科感染的途径。《灵枢•痈疽》则是一篇完整的外科专论，对外科化脓性疾病的形成机理作了精辟的论述：“血脉营卫，周流不休，上应星宿，下应经数，寒邪客于经络之中则血泣，血泣则不通，不通则卫气归之，不得复反，故痈肿。寒气化为热，热胜则肉腐，肉腐则为脓。”这些理论直到今天仍然指导着外科的临床应用。此外，在治疗上，还记载了豕膏外敷、铍针放脓、斩刈死趾等治疗方法。《内经》中这些医学理论，基本上是在当时先进的哲学思想——古代的唯物辩证法——整体的动态的天人相应学说、阴阳五行学说、精气神学说指导下形成的。
 
-中医外科学形成于汉代的代表人物，是被历代誉为“神医”的东汉末年的外科鼻祖华佗(公元141〜203年）。华佗安徽亳县人，精通内、妇、儿、针灸各科，更擅长外科，最突出的成就是发明了全身麻醉剂——“麻沸散”，并首创了剖腹术。《后汉书》载：“若疾发于内，针药能及者，乃令先以酒服麻沸散，既醉无所觉，因刳破腹背，抽割积聚；若在肠胃，则断截湔洗；除去疾秽；既而缝合，傅以神膏，四五日创愈，一月之间皆平复”。同时还有三个开腹病例，一例是死胎，二例为腹中疾。
+中医外科学形成于汉代的代表人物，是被历代誉为“神医”的东汉末年的外科鼻祖华佗(公元141~203年）。华佗安徽亳县人，精通内、妇、儿、针灸各科，更擅长外科，最突出的成就是发明了全身麻醉剂——“麻沸散”，并首创了剖腹术。《后汉书》载：“若疾发于内，针药所不能及者，乃令先以酒服麻沸散，既醉无所觉，因刳破腹背，抽割积聚；若在肠胃，则断截湔洗；除去疾秽；既而缝合，傅以神膏，四五日创愈，一月之间皆平复。”同时还有三个开腹病例，一例是死胎，二例为腹中疾。
 
-汉代时，已有了专供外用的药物，如《周礼•天官》中记载：“凡疗疡以五毒攻之，以五气养之，以五药疗之，以五味节之。”郑玄注五毒谓：“今（汉）医人有五毒之药，合黄堥，置石胆、丹砂、雄黄、矾石、磁石其中，烧三日夜，其烟上着，以鸡羽扫取以治疡"。此即是现代升丹的炼法和应用之先河。还有《五十二病方》中的水银、酒；《内经》中的豕膏（豕膏就是猪油），这些都是现时膏药的萌芽。塗猪油的方法后汉时仍在沿用，《后汉书•东夷传》，“冬以豕膏塗身，厚数分，以御风寒”。汉代张仲景著的《金匮要略》，其中治疗肠痈、浸淫疮、寒疝、结胸等方药，至今仍为临床所应用，中医第一部外科专着，为《金创瘈疭方》，成书于西汉前后，可惜没有传世。
+汉代时，已有了专供外用的药物，如《周礼•天官》中记载：“凡疗疡以五毒攻之，以五气养之，以五药疗之，以五味节之。”郑玄注五毒谓：“今（汉）医人有五毒之药，合黄堥，置石胆、丹砂、雄黄、矾石、磁石其中，烧三日夜，其烟上着，以鸡羽扫取以治疡"。此即是现代升丹的炼法和应用之先河。还有《五十二病方》中的水银、酒；《内经》中的豕膏（豕膏就是猪油），这些都是现时膏药的萌芽。塗猪油的方法后汉时仍在沿用，《后汉书•东夷传》：“冬以豕膏塗身，厚数分，以御风寒”。汉代张仲景著的《金匮要略》，其中治疗肠痈、浸淫疮、寒疝、结胸等方药，至今仍为临床所应用，中医第一部外科专著，为《金创瘈疭方》，成书于西汉前后，可惜没有传世。
 
 由此可见，从理论到实践，从药物到手术，从制度到医生，中医外科到汉代已初步形成了一个独立的学科。
 
@@ -32,7 +32,7 @@
 
 汉代之后，由于儒学在中国占了统治地位，“身体发肤，受之父母，不敢毁伤”的思想影响了解剖和外科手术的发展，许多外科医生不得不隐姓埋名，如《晋书》载魏泳之兔唇，就是经手术治疗而愈，但医生却不留名。然而社会要发展，人们需要用外科的疗法以祛病和康复，所以，两晋南北朝和隋唐五代时期中医外科又有了进一步的发展。其主要成就有：
 
-晋•皇甫谧著《针灸甲乙经》，成书于公元264年，其中有外科专论3篇，提出了近30种病证，特别对痈疽论述较为详尽。葛洪（公元281〜341年）著的《肘后备急方》，对外科也有很大的贡献：①记载了疥虫和沙虱，指出了它们的生长坏境和传播疾病的途径，这比欧洲有文字记载的疥虫和沙虱要早一千多年。②用疯狗脑敷治疯狗咬伤，开创了用免疫法治疗狂犬病的先例。③用海藻酒治疗瘿疾（甲状腺肿大类疾病）等等。
+晋•皇甫谧著《针灸甲乙经》，成书于公元264年，其中有外科专论3篇，提出了近30种病证，特别对痈疽论述较为详尽。葛洪（公元281~341年）著的《肘后备急方》，对外科也有很大的贡献：①记载了疥虫和沙虱，指出了它们的生长坏境和传播疾病的途径，这比欧洲有文字记载的疥虫和沙虱要早一千多年。②用疯狗脑敷治疯狗咬伤，开创了用免疫法治疗狂犬病的先例。③用海藻酒治疗瘿疾（甲状腺肿大类疾病）等等。
 
 晋末时期，出现了我国现存的第一部外科学专著——《刘涓子鬼遗方》。本书传为晋末南朝宋人刘涓子遗著，齐•龚庆宣整理刊行。原著10卷，现仅存5卷：卷一论痈疽的鉴别；卷二为战伤的治法；卷三述痈疽的证治；卷四叙脓肿的诊断与手术；卷五论皮肤病的诊治，共收方剂151个。书中很重视外治法，介绍了止血、止痛、收敛、镇静、解毒等治疗方法，因而医史界称之为我国的军阵外科著作。该书对痈疽辨脓、切开、排脓、引流等方面论述尤为精详，如以硬度辨脓：“痈大坚者未有脓，半坚半薄有脓，当上薄者都有脓，便可破之”，如以痛辨脓等等。书中火针的运用，也是决脓术的一大发展。在痈疽的治疗上，该书初步建立了辨证论治的思想，运用了外治消（消散）、蚀（食恶肉）、收（收口生肌）的三种治则，体现了作者内外合治的丰富经验。总之，总结了古代中医外科学的成就和医疗经验，对我国外科学非手术疗法的发展有很大影响。
 
@@ -46,9 +46,9 @@
 
 明代以及清代鸦片战争之前的时期，是外科发展的兴盛时期，其主要标志是名家辈出，著作如林，学术争鸣。
 
-薛己的《外科发挥》、《外科枢要》（公元1529年）从理论到临床均加论述，文字简要，内容翔实，第一次详细记述了对新生儿破伤风的诊治。汪机的《外科理例》（公元1531年）主张外病内治，切戒滥用刀针。曾说“外科必本于内，知乎内，以求乎外，其如视诸掌乎。.……治外遗内，所谓不揣其本而齐其未”。说明医治外科疾病，必须掌握中医基本理论，立法才能正确。陈实功的《外科正宗》（公元1617年），全书四卷，较全面地介绍了外科学的病因、病机、诊断和治疗原则，细载病名，详列治法，并附有验案自唐到明的外科治法，此书大多收录，曾以“列证详、论治精”见称。这是一部代表明以前外科学伟大成就的重要文献，从学术思想上来看，该书重视脾胃。他说“疮全赖脾土”，“盖脾胃盛则多食而易饥，其人多肥，气血亦壮；脾胃弱，则少食而难化，其人多瘦，气血亦衰。故外科尤以调理脾胃为要”。又说“托里则气血壮而脾胃盛，使脓秽自排，毒气自解，死肉自溃，新肉自生，饮食自进，疮口自敛”。在手术治疗方面的成就更为突出，共记述了14种手术方法，如脱疽截趾（指）术、鼻瘜肉摘除术、食道异物取出术、下颌关节复位术、颈吻合术、腹腔穿刺排脓术等，都有很大的实用价值。同时还述及了口唇创伤缝合术、缺耳、缺唇矫形术；并指出了良性肿瘤和恶性肿瘤的鉴别诊断和治疗原则等。而且设计制造了巧妙的手术器械，如鼻痔的摘除工具，这与近代使用的鼻瘜肉绞断器甚为相近。书中他还提出换药室应“窗明几净”，疮口应予冲洗。护理上，强调注意病人的饮食营养，反对无原则的饮食禁忌，等等。由此，陈实功对外科学的发展可见一斑了。之后顺治、康熙时御医祁坤编写的《外科大成》，继承了《外科正宗》的理论和治庁经验。其子祁昭远，继承父业，康熙、雍正时任太医院院判。其孙祁宏源，编写了《医宗金鉴•外科心法要诀》，该书内容丰富，既有理论，尤重实践，系统总结了清代以前历代外科医家的经验，是学习中医外科的重要著作。
+薛己的《外科发挥》、《外科枢要》（公元1529年）从理论到临床均加论述，文字简要，内容翔实，第一次详细记述了对新生儿破伤风的诊治。汪机的《外科理例》（公元1531年）主张外病内治，切戒滥用刀针。曾说“外科必本于内，知乎内，以求乎外，其如视诸掌乎。……治外遗内，所谓不揣其本而齐其未”。说明医治外科疾病，必须掌握中医基本理论，立法才能正确。陈实功的《外科正宗》（公元1617年），全书四卷，较全面地介绍了外科学的病因、病机、诊断和治疗原则，细载病名，详列治法，并附有验案自唐到明的外科治法，此书大多收录，曾以“列证详、论治精”见称。这是一部代表明以前外科学伟大成就的重要文献。从学术思想上来看，该书重视脾胃。他说“疮全赖脾土”，“盖脾胃盛则多食而易饥，其人多肥，气血亦壮；脾胃弱，则少食而难化，其人多瘦，气血亦衰。故外科尤以调理脾胃为要”。又说“托里则气血壮而脾胃盛，使脓秽自排，毒气自解，死肉自溃，新肉自生，饮食自进，疮口自敛”。在手术治疗方面的成就更为突出，共记述了14种手术方法，如脱疽截趾（指）术、鼻瘜肉摘除术、食道异物取出术、下颌关节复位术、颈吻合术、腹腔穿刺排脓术等，都有很大的实用价值。同时还述及了口唇创伤缝合术、缺耳、缺唇矫形术；并指出了良性肿瘤和恶性肿瘤的鉴别诊断和治疗原则等。而且设计制造了巧妙的手术器械，如鼻痔的摘除工具，这与近代使用的鼻瘜肉绞断器甚为相近。书中他还提出换药室应“窗明几净”，疮口应予冲洗。护理上，强调注意病人的饮食营养，反对无原则的饮食禁忌，等等。由此，陈实功对外科学的发展可见一斑了。之后顺治、康熙时御医祁坤编写的《外科大成》，继承了《外科正宗》的理论和治庁经验。其子祁昭远，继承父业，康熙、雍正时任太医院院判。其孙祁宏源，编写了《医宗金鉴•外科心法要诀》，该书内容丰富，既有理论，尤重实践，系统总结了清代以前历代外科医家的经验，是学习中医外科的重要著作。
 
-康熙乾隆年间王维德著《外科证治全生集》（公元1740年）。该书特点是：创立了以阴阳为主的辨证论治法则，所谓“凭经治证，天下皆然，分别阴阳，唯余一家”。把复杂的外科疾患分为阴阳两类，如痈阳、疽阴等。主张“以消为贵，以托为畏”，除治疔用刺外，反对滥用刀针，禁用腐蚀药物。特别是对阴证的治疗具有独特的见解，主张以“阳和通腠，温补气血”的原则治疗阴证，他说“世人一概清火以解毒，殊不知毒即是寒，解寒而毒自化，清火而毒愈凝。然毒之化要由脓，脓之来，必由气血，气血之化必由温也，岂可凉乎？”自拟阳和汤、醒消丸、犀黄丸、小金丹等名方用于临床，直到现在，仍为有效方药。其后许克昌、毕法合写的《外科证治全书》继承了《外科证治全生集》的特长，而且有所发挥。高秉钧所著《疡科心得集》（公元1809年），认为外科疾病的发病原因与其发病部位有一定的联系，“疡科之证，在上部者倶属风温、风热；……在下部者俱属湿火、湿热；……在中部者多属气郁，火郁”。在辨证论治上对外科阳证、热证，特别是“走黄”、“内陷”的理论论述有所提高，而且首先引用了温病学派的犀角地黄汤、紫雪丹、至宝丹治疗疔疮走黄，提高了疗效，开拓了思路，至今仍有很大实用价值。在编写体例上以两种相似病证互编一算，详加鉴别，对于辨证论治很有启发，这是中医外科学中有鉴别诊断的重要文献。其后余听鸿《外证医案汇编》对高秉钧的学术思想有所发挥。
+康熙乾隆年间王维德著《外科证治全生集》（公元1740年）。该书特点是：创立了以阴阳为主的辨证论治法则，所谓“凭经治证，天下皆然，分别阴阳，唯余一家”。把复杂的外科疾患分为阴阳两类，如痈阳、疽阴等。主张“以消为贵，以托为畏”，除治疔用刺外，反对滥用刀针，禁用腐蚀药物。特别是对阴证的治疗具有独特的见解，主张以“阳和通腠，温补气血”的原则治疗阴证，他说“世人一概清火以解毒，殊不知毒即是寒，解寒而毒自化，清火而毒愈凝。然毒之化要由脓，脓之来，必由气血，气血之化必由温也，岂可凉乎？”自拟阳和汤、醒消丸、犀黄丸、小金丹等名方用于临床，直到现在，仍为有效方药。其后许克昌、毕法合写的《外科证治全书》继承了《外科证治全生集》的特长，而且有所发挥。高秉钧所著《疡科心得集》（公元1809年），认为外科疾病的发病原因与其发病部位有一定的联系，“疡科之证，在上部者倶属风温、风热；……在下部者俱属湿火、湿热；……在中部者多属气郁，火郁”。在辨证论治上对外科阳证、热证，特别是“走黄”、“内陷”的理论论述有所提高，而且首先引用了温病学派的犀角地黄汤、紫雪丹、至宝丹治疗疔疮走黄，提高了疗效，开拓了思路，至今仍有很大实用价值。在编写体例上以两种相似病证互编一篇，详加鉴别，对于辨证论治很有启发，这是中医外科学中有鉴别诊断的重要文献。其后余听鸿《外证医案汇编》对高秉钧的学术思想有所发挥。
 
 清代的外科著作除上述之外，还有陈司成的《霉疮秘录》（公元1632年），是我国第一部霉毒学专著。书中采用砒石、轻粉、雄黄、朱砂等药物制成丸剂或丹药内服，是世界上使用砷剂治疗霉毒的最早记载。陈士铎的《洞天奥旨》（公元1694年），善于使用内服药消散疮疡，其组方结构严谨，主药突出，颇有特色。顾士澄《疡医大全》（公元1760年），分门别类，便于查阅。高文晋《外科图说》（1834年），邹岳《外科真诠》（公元1838年）都各有特点，吴师机《理瀹骈文》（公元1864年），专述膏药的外治法，总结了不少治疗学上的新成就。
 
