update ok/hk/hk1gl01-0.21.15.0.0.md. 但知养息，沸药可愈  弗 锻炼销烁  煅

--- a/ok/hk/hk1gl01-0.21.15.0.0.md
+++ b/ok/hk/hk1gl01-0.21.15.0.0.md
@@ -80,7 +80,7 @@
 
 20.多言损气：《包氏喉科指掌》：“本原不足，诵读太急”。这型病人，以外语院校的低年级学生最多。《医统》：“因歌唱伤气而声不出。此不内外因也。养息自愈”。最多见者为演员、歌唱家等，唯一的好办法，就是声带休息。
 
-21.痛哭叫骂：《景岳全书》：“有号叫歌唱悲哭，……但知养息，沸药可愈”。《张氏医通》亦有叫骂声嘶而喉破失音者”。
+21.痛哭叫骂：《景岳全书》：“有号叫歌唱悲哭，……但知养息，弗药可愈”。《张氏医通》亦有叫骂声嘶而喉破失音者”。
 
 22.月经期失音：《医参》：“室女有无故而喑者，月闭也，亦胞脉绝也，……皆瘀血阻塞，少阴通舌本之道也”。
 
@@ -118,7 +118,7 @@
 
 39.肾怯：《钱乙指迷篇》：“乃肾怯，不能上接于阳故也”。
 
-40.肝火犯肺：《百病辨证录》：“火过于大旺，未免刑金太甚，锻炼销烁，唯有化焚之形”。
+40.肝火犯肺：《百病辨证录》：“火过于大旺，未免刑金太甚，煅炼销烁，唯有化焚之形”。
 
 41.肝旺肺燥：《临证指南》：“有肺金燥甚，木火上炎，咽干喉痹而喑也”。
 
