--- a/ok/gk/gk04-0.4.1.0.0.md
+++ b/ok/gk/gk04-0.4.1.0.0.md
@@ -14,25 +14,25 @@
 
 2.攻下逐淤法：为攻逐体内淤血留滞之法。适用于损伤初期，内伤蓄血，大便不通的体实病人。代表方剂如大成汤（《外科正宗》见后附表）。水煎服。药后得下即停。
 
-主治跌扑损伤后，瘀血内蓄，昏睡，二便秘结者，或腰椎损伤后伴发肠麻痹腹胀者。体虚及胃肠功能紊乱者禁用或慎用。
+主治跌扑损伤后，瘀血内蓄，昏睡，二便秘结者；或腰椎损伤后伴发肠麻痹腹胀者。体虚及胃肠功能紊乱者禁用或慎用。
 
 3.清热凉血法：为清营凉血止血之法。适用于损伤初期，血热错经妄行，或瘀肿发热，或创伤感染，或火毒内攻，或热邪蕴结。代表方剂如下：
 
 （1）以清热凉血为主，如清营汤（《温病条辨》）。
 
-犀角三钱 生地五钱 丹参 连翘各二钱黄连一钱五分 竹叶心一钱 水煎服。主治创伤或骨关节感染后，温热之邪入营内陷，症见高热烦渴，谵语发斑，舌绛而干者。里无实热者禁用。还应注意防止寒凉太过，引起瘀血内停。
+犀角三钱 生地五钱 丹参 连翘各二钱 黄连一钱五分 竹叶心一钱 水煎服。主治创伤或骨关节感染后，温热之邪入营内陷，症见高热烦渴，谵语发斑，舌绛而干者。里无实热者禁用。还应注意防止寒凉太过，引起瘀血内停。
 
 （2）以凉血止血为主，如十灰散（《十药神书》），或四生丸（《妇人良方》）。
 
 十灰散：大蓟 小蓟 荷叶 侧柏叶 白茅根 茜草根 栀子 大黄 牡丹皮 棕榈皮各等分 各烧灰存性，研极细末，每服10～15克，温开水下。用鲜藕汁或鲜萝卜汁调服更佳。主治损伤所致咯血、吐血、衄血、尿血、便血、创面渗血等。无出血者禁用。
 
-四生丸：生荷叶 生艾叶 生柏叶 生地黄各等分 水煎服。或将生药捣汁服；或为丸，每次服6〜12克，每日3次。主治损伤出血，血热妄行，吐血或衄血。无血热者慎用。
+四生丸：生荷叶 生艾叶 生柏叶 生地黄各等分 水煎服。或将生药捣汁服；或为丸，每次服6~12克，每日3次。主治损伤出血，血热妄行，吐血或衄血。无血热者慎用。
 
 （3）以清热解毒为主，如五味消毒饮（《医宗金鉴》）。
 
-金银花三钱 野菊花 蒲公英 紫花地丁紫背天葵子各一钱二分 水煎服，每日1〜3剂。主治附骨疽初起，开放性损伤创面感染初期。伤处无感染趋向者禁用。
+金银花三钱 野菊花 蒲公英 紫花地丁 紫背天葵子各一钱二分 水煎服，每日1~3剂。主治附骨疽初起，开放性损伤创面感染初期。伤处无感染趋向者禁用。
 
-4.补气摄血法；为补气固脱之法。适用于创伤失血较多，面色苍白，四肢发凉，心烦口渴，冷汗自出，神疲眩晕，脉细数无力或芤，有气随血脱、血随气亡之兆者。代表方剂如独参汤（《景岳全书》）或当归补血汤（《内外伤辨惑论》）。
+4.补气摄血法：为补气固脱之法。适用于创伤失血较多，面色苍白，四肢发凉，心烦口渴，冷汗自出，神疲眩晕，脉细数无力或芤，有气随血脱、血随气亡之兆者。代表方剂如独参汤（《景岳全书》）或当归补血汤（《内外伤辨惑论》）。
 
 独参汤：人参一两 水炖服。主治失血后，气血虚衰，虚烦作渴，气随血脱之危症。本方仅供急救使用。必要时还当结合输血、补液等。
 
@@ -40,13 +40,13 @@
 
 5.发表散瘀法：适用于跌打损伤初期，兼有表邪者。根据“伤后易感寒”的临床经验，凡新伤多从表治。代表方如疏风养血汤（《伤科补要》）。
 
-荆芥 羌活 防风 川芎 天花粉 白芍秦艽 薄荷 当归 红花 水煎服。主治损伤后复感风寒。
+荆芥 羌活 防风 川芎 天花粉 白芍 秦艽 薄荷 当归 红花 水煎服。主治损伤后复感风寒。
 
 （二）中期治疗 损伤诸证，经初期治疗后，症状一般有所减轻，病情逐渐好转。再根据或内伤气血、或外损筋骨进行辨证论治。常用治法如下：
 
 1.和营止痛法：为和营止痛、祛瘀生新之法。适用于损伤经早期消、下、清等法治疗后，瘀血未尽，气机不畅，肿痛未除。代表方剂如和营止痛汤（《伤科补要》）。
 
-赤芍 当归尾 川芎 苏木 陈皮 乳香桃仁 续断 乌药 没药 木通 甘草 水煎服。主治损伤瘀血肿痛。
+赤芍 当归尾 川芎 苏木 陈皮 乳香 桃仁 续断 乌药 没药 木通 甘草 水煎服。主治损伤瘀血肿痛。
 
 2.接骨续筋法，为祛瘀生新，接骨续筋之法。适用于损伤之后，经早期治疗，骨位已正，筋已理顺，瘀肿消散，以接骨续筋为主者。其代表方剂如续骨活血汤（《中医伤科学讲义》经验方）。
 
