update ok/gk/gk02-0.0.2.0.0.md. 标点、改为句号。

--- a/ok/gk/gk02-0.0.2.0.0.md
+++ b/ok/gk/gk02-0.0.2.0.0.md
@@ -10,7 +10,7 @@
 
 2.气主动：气是人体生命活动的动力，人体各脏腑、组织器官的生理活动，血的生成和布输，津液的生成、布输和排泄，都是气的推动作用。
 
-气在入体内的运动称为“气机”，其运动形式分为升、降、出、入。气机在体内必须维持平衡协调。“气归于权衡，权衡以平”。（《素问•经脉别论》）如果气机的升、降、出、入失去了平衡协调，谓之气机紊乱。气是人体各部位生理活动的动力，气机失调，则各种病变都可发生.
+气在入体内的运动称为“气机”，其运动形式分为升、降、出、入。气机在体内必须维持平衡协调。“气归于权衡，权衡以平”。（《素问•经脉别论》）如果气机的升、降、出、入失去了平衡协调，谓之气机紊乱。气是人体各部位生理活动的动力，气机失调，则各种病变都可发生。
 
 3.血主濡：血是人体的营养、滋润的物质。气的动力作用，必须有血为基础物质才得以维持。人体各脏腑、经脉、四肢赖血以濡养，才能有正常的生理功能，才能精神充沛。人的生命活动表现，即神气，是以气血维持正常生理活动。正如《灵枢•营卫生会》说：“血者，神气也。故血之与气，异名同类焉”。
 
