update ok/gl/gl09-0.3.0.0.0.md. 在古方多注明“呚咀”应为呋咀

--- a/ok/gl/gl09-0.3.0.0.0.md
+++ b/ok/gl/gl09-0.3.0.0.0.md
@@ -8,7 +8,7 @@
 
 汤剂是药物配伍组成方剂，加水煮成汤液饮服。汤剂的特点是吸收快，作用迅速，药物加减灵活，适用于病情较急者。古人所谓；“汤者荡也，去大病用之”即指出了汤剂的应用特点。
 
-汤剂中所用药物，在古方多注明“呚咀”，是将药物切碎之意。至宋、金、元时代，多锉为粗末，近代则多用饮片，目的是在便于煎煮，使其更好地发挥药效。
+汤剂中所用药物，在古方多注明“呋咀”，是将药物切碎之意。至宋、金、元时代，多锉为粗末，近代则多用饮片，目的是在便于煎煮，使其更好地发挥药效。
 
 汤剂是临床常用的主要剂型，历代医家对其煎服法很为重视。不同性质的药物，则采用不同的煎药法。凡发散取汗的药物，不宜久煎。味厚滋补的药物，宜微火久煮。介壳类或矿物药宜先煎。气味芳香不耐久煮的药物，宜后下。胶类药物如[阿胶](https://www.gmzyjc.com/read/bc/bc17-0.3.5.0.0.md)等，或不须煎煮的药物如[芒硝](https://www.gmzyjc.com/read/bc/bc02-0.1.2.0.0.md)等，要待其他药物煎成去渣后，加入药液中溶化。贵重而又体积小的药物如[珍珠](https://www.gmzyjc.com/read/bc/bc09-0.1.9.0.0.md)、[牛黄](https://www.gmzyjc.com/read/bc/bc08-0.0.2.0.0.md)等，宜研末冲服。[犀角](https://www.gmzyjc.com/read/bc/bc03-0.3.1.0.0.md)、羚羊等贵重而又难于煎出气味的药物，用水磨或锉粉调服。新鲜多汁的药物如鲜生地、[甘蔗](https://www.gmzyjc.com/read/bc/bc03-0.4.21.0.0.md)等，可以打汁冲服。砂泥多的药物如灶心土等，宜先用水煮，然后取其煎汁澄清，再以之煎其它药。煎药用水，前人说法较多，目前多用清洁的自来水或井水。用水量一般以30克药用水200~300毫升为宜。煎药器皿不宜用铁器，以免发生化学变化，产生副作用。一般用陶瓷砂锅。煎药火候有“武火”与“文火”之分。急火快煎为武火，小火慢煎为文火。煎药时一般多先用武火，煮沸后则改用文火。解表药、清热药、攻下药等宜武火急煎，以免药性挥发，降低药效。滋补药宜文火久煎，以使有效成份充分煎出。某些有毒药物亦应文火久煎，以减低其毒性。
 
