update ok/hk/hk1gl01-0.23.0.0.0.md. 标题字体缩小

--- a/ok/hk/hk1gl01-0.23.0.0.0.md
+++ b/ok/hk/hk1gl01-0.23.0.0.0.md
@@ -1,4 +1,4 @@
-## 谷贼（异物）
+## 谷贼<small>（异物）</small>
 
 咽、喉部异物病例的报导，以及食道、气管异物，在祖国是很早的。《礼•内则注》中“食之哽人”的“哽”和《说文》中的“鲠”，都是异物。
 
@@ -127,5 +127,3 @@
 25.试述梅核气（癔性咽喉异感症）的病因病机？以及诊断、治疗？
 
 26.谷贼（异物）应怎样检査？有哪些治疗措施？
-
- 
