--- a/ok/ek/ek0zl07-0.3.0.0.0.md
+++ b/ok/ek/ek0zl07-0.3.0.0.0.md
@@ -26,7 +26,7 @@
 
 8.安蛔驱虫法：主要适用于肠道虫证，如蛔虫、蛲虫等。其中尤以蛔虫变化多端，可合併胆道蛔虫证、蛔虫性肠梗阻等，发生这些情况，若用猛烈驱虫药，反易造成虫体躁扰，加重病情，此时当先安蛔缓痛为主，方用乌梅丸，蛔厥吐蛔，昏不知人，亦用乌梅丸。如唇红口渴证见热象者，用连梅安蛔汤；如形寒肢冷，便溏呕吐者，用理中安蛔汤，待病势缓和后，再予驱虫。常用驱蛔方剂，有追虫丸、下虫丸等。驱蛔虫有效中药如使君子、苦楝根白皮等；驱姜片虫有槟榔等；驱蛲虫有蛲虫散（使君子粉7份，生大黄1份制成），配合百部煎剂灌肠等。
 
-9.利水消肿法：主要用于水湿停聚，小便短少而水肿的患儿。若为湿邪内蕴，郁而化热，水湿泛于肌肤，口渴尿赤者，则为阳水；若脾肾阳虚，不能化气行水，脾失健运，水湿内聚为肿，则为阴水。常用方剂，若阳水可用茵陈五苓散、麻杏五皮饮、越婢加术汤等发汗似利尿。若阴水可用防己黄芪汤加附片（少量），真武汤等补气行湿、温阳利尿。此外，如冬瓜皮、大蒜子、车前草、荠菜花、苡米根等也有较好的利尿消肿作用。
+9.利水消肿法：主要用于水湿停聚，小便短少而水肿的患儿。若为湿邪内蕴，郁而化热，水湿泛于肌肤，口渴尿赤者，则为阳水；若脾肾阳虚，不能化气行水，脾失健运，水湿内聚为肿，则为阴水。常用方剂，若阳水可用茵陈五苓散、麻杏五皮饮、越婢加术汤等发汗似利尿。若阴水可用防己黄芪汤加附片（少量）、真武汤等补气行湿、温阳利尿。此外，如冬瓜皮、大蒜子、车前草、荠菜花、苡米根等也有较好的利尿消肿作用。
 
 10.健脾益气法：主要适用于脾胃虚弱，气虚不足的小儿，如婴儿腹泻、疳证及病后体虚等。常用方剂如七味白术散、四君子汤、异功散，参苓白术散、补中益气汤等。白术、鸡内金等分研细冲服，有健脾助化作用，单味淮山药粉调服，有良好的健脾止泻作用，为儿科常用药物。气虚与脾虚，关系密切，治气虚多从健脾着手。健脾时又多借助补气，故两者常配合运用，如四君、六君之类。
 
