--- a/ok/gl/gl10-0.1.0.0.0.md
+++ b/ok/gl/gl10-0.1.0.0.0.md
@@ -10,7 +10,7 @@
 
 4.用整体动态的观点、综合辨证的方法来诊察与判断病情，预测病机转化的趋势。这是中医医疗指导思想的独到之处，特别是在世界范围内逐年增加的一大批多因素、多层次的综合性疾病和慢性疾病面前，西方医学或穷于应付，或毫无良策。所以，心脑血管病、肿瘤病、自身感染性疾病、自体免疫性疾病、病毒所致疾病，是目前西方医学号称的“五大难关”。这些疾病的发生与发展，内因（遗传、体质、代谢、免疫等因素）起决定作用，个体的差异性很大，仅仅依靠一药一方是难以在治疗中取效的。然而中医指导临床的理论思想和治疗方法更适于这类疾病的治疗。应当指出的是，这类疾病不是今天才有的，绝大多数病在古代就存在着，在历代中医文献中都有大量的临床记录，当代中医临床实践的经验表明，古人在数千年间积累起来的有效经验，今天用之同样有效。例如，中风，主要指脑血管病，是目前人类死亡的三大疾病之一。在日本，中风的死亡率为所有疾病的第一位。从我国多方面资料分析，中风的死亡率也占首位（86.03~164/10万）。在我国，中风的发病率高到惊人的程度，如北京在四个城区中调查，死于高血压脑血管病者为122.94/10万；如上海市卢湾区新发脑血管病为229.7/10万。在我国，中风的致残率甚高，在免于死亡而存活的中风患者中，有3/4以上生活不能自理。在我国，每年约有160~180万人发生中风，其中约有86~100万人死于中风疾患，而存活者中有50万~75万人致残，生活中需要人扶助料理，给家庭和社会造成很多困难。今天，中风是世界的第一位的大病，而在我国的古代，也被列为群病之首，积累了极其丰富和宝贵的经验，可见，前人治中风的经验足资借鉴。为了掌握治疗中风的临床技能，只要你信手翻开历代中医古籍，尤其是历代临床医家的著作，都把治疗中风摆在重要位置，详细论述中风的病因、病机、辨证、治疗、善后、预防等，其中有许多宝贵的经验可供我们今天学习与继承，这显然是中医学的一大优势。
 
-5.以整体为本、正气为本、体质为本、治病求本的思想，有利于调动人体自身的抗病能力，达到既解除病痛、又增强体质的目的。（1） 疾病的发生，是人的整体阴阳失调的结果，而整体阴阳失调往往通过局部症状或病变反映出来，因此，中医治病，在重视局部病变的同时，要全面观察和分析，弄清整体阴阳偏盛偏衰的情况，弄清局部病变与整体病变的内在联系，然后从整体上辨证论治。例如，由于暴怒双目失明，称为暴盲，虽是眼睛的局部病变，但从肝与目的内在联系中，可以判断是伤肝所致，治疗从肝入手，往往会使眼睛复明。（2）人的正常自我调节功能与周围自然环境相应，往往表现在不同季节的常见病上。治疗时，注意气候对疾病的影响。例如，1957年河北一带发生乙型脑炎大流行，石家庄地区从暑温论治，用加味白虎汤取得了疗效。1960年以后再次出现流行，按上述方法治疗无效。中医研究院著名老中医蒲辅周根据中医运气学说岁运发病规律推测，确定该年属湿运太过，遂后按湿温论治，采取化湿清热法遣方用药，使乙型脑炎的治疗效果显著提高。（3）人的心理状态和社会因素对人的疾病的发生、发展有着密切关系，中医在内伤杂病范围内，重视情志致病，并积累了许多治疗情志病的临床经验，西方医学兴起的一个分支——心身医学，也在朝这个方向探索之中。（4） 调整整体机能，调动人的抗病能力，对老年医学和康复医学的理论和实践方面的发展，将具有指导临床的实际意义。（5） 正气的强弱，常常是疾病的发生与否及病势进退的关键因素，要想有效地驱除病邪，必须依靠正气的力量。在正气极虚的情况下，单纯祛邪一般是无效的。（6）《内经》从不同角度对人类进行了体质分类，并指出不同的体质产生不同的疾病，应该给予不同的治疗。对许多疾病，中医不仅着眼于某些致病因素，更注重改善体质，往往获得根本性治疗。例如，慢性肾炎病人常常有反复感冒、咽喉肿痛的病史，每次都可能引起急性发作和病情加重，因此，防止感染，是治疗慢性肾炎的一个重要方面，但单用西药抗炎药或中药清热解毒之品，效果往往不理想，既使一时取效，也容易反复。如果真能从改善体质入手，调整全身的阴阳，不但可以改善局部病变，而且增强了人体的抗病能力，对肾炎的治疗起了重要作用。（7） 在所有构成疾病的矛盾关系中，起主导作用的矛盾关系，或这一矛盾的主要方面，就是“本”，其它则为“标”。“本”与“标”是相比较而存在的，治病求本，意思是说，治病在于寻找调整阴阳的方法。所以，治病求本，是中医治疗疾病的一种战略思想和全局观点。这一思想，并非意味放弃“标”，在具体临证时，分清标本缓急，急则治其标，缓则治其本，或标本同治，也是在临床运用中应该灵活掌握的。（8） 辨证论治的核心是“证”，“证”是立法施治的最合理的依据，而针对证候辨证论治，是科学的治疗原则。“证”不同于症状，也不同于疾病本身，而是人体在疾病某一阶段所表现出来的病因、病位、病变性质以及邪正双方力量消长等方面情况的病理概括，是天、人、病三者之间各种关系的总和。由此可见，“证”反映了一定阶段上疾病的本质，是随时可变的。同一疾病，如果症候不同，采取的治法不同；而不同疾病表现出相同的证候，可采取相同或相近的治法，这就是同病异治，异病同治。病是以致病因素（邪气）为主体，以人体为客体。证则以人体（正气）为主体，以致病因素为客体。病与证之间有着密切关系，一方面，病必须通过证表现出来，证是病的表现形式和归宿；另一方面，病对证则有较强的制约性和规定性，在一种病的全过程中，可以出现若干不同的证。因此，如辨证与辨病相结合，治疗时，坚持辨证论治。
+5.以整体为本、正气为本、体质为本、治病求本的思想，有利于调动人体自身的抗病能力，达到既解除病痛、又增强体质的目的。（1） 疾病的发生，是人的整体阴阳失调的结果，而整体阴阳失调往往通过局部症状或病变反映出来，因此，中医治病，在重视局部病变的同时，要全面观察和分析，弄清整体阴阳偏盛偏衰的情况，弄清局部病变与整体病变的内在联系，然后从整体上辨证论治。例如，由于暴怒双目失明，称为暴盲，虽是眼睛的局部病变，但从肝与目的内在联系中，可以判断是伤肝所致，治疗从肝入手，往往会使眼睛复明。（2）人的正常自我调节功能与周围自然环境相应，往往表现在不同季节的常见病上。治疗时，注意气候对疾病的影响。例如，1957年河北一带发生乙型脑炎大流行，石家庄地区从暑温论治，用加味白虎汤取得了疗效。1960年以后再次出现流行，按上述方法治疗无效。中医研究院著名老中医蒲辅周根据中医运气学说岁运发病规律推测，确定该年属湿运太过，遂后按湿温论治，采取化湿清热法遣方用药，使乙型脑炎的治疗效果显著提高。（3）人的心理状态和社会因素对人的疾病的发生、发展有着密切关系，中医在内伤杂病范围内，重视情志致病，并积累了许多治疗情志病的临床经验，西方医学兴起的一个分支——心身医学，也在朝这个方向探索之中。（4） 调整整体机能，调动人的抗病能力，对老年医学和康复医学的理论和实践方面的发展，将具有指导临床的实际意义。（5） 正气的强弱，常常是疾病的发生与否及病势进退的关键因素，要想有效地驱除病邪，必须依靠正气的力量。在正气极虚的情况下，单纯祛邪一般是无效的。（6）《内经》从不同角度对人类进行了体质分类，并指出不同的体质产生不同的疾病，应该给予不同的治疗。对许多疾病，中医不仅着眼于某些致病因素，更注重改善体质，往往获得根本性治疗。例如，慢性肾炎病人常常有反复感冒、咽喉肿痛的病史，每次都可能引起急性发作和病情加重，因此，防止感染，是治疗慢性肾炎的一个重要方面，但单用西药抗炎药或中药清热解毒之品，效果往往不理想，既使一时取效，也容易反复。如果真能从改善体质入手，调整全身的阴阳，不但可以改善局部病变，而且增强了人体的抗病能力，对肾炎的治疗起了重要作用。（7） 在所有构成疾病的矛盾关系中，起主导作用的矛盾关系，或这一矛盾的主要方面，就是“本”，其它则为“标”。“本”与“标”是相比较而存在的，治病求本，意思是说，治病在于寻找调整阴阳的方法。所以，治病求本，是中医治疗疾病的一种战略思想和全局观点。这一思想，并非意味放弃“标”，在具体临证时，分清标本缓急，急则治其标，缓则治其本，或标本同治，也是在临床运用中应该灵活掌握的。（8） 辨证论治的核心是“证”，“证”是立法施治的最合理的依据，而针对证候辨证论治，是科学的治疗原则。“证”不同于症状，也不同于疾病本身，而是人体在疾病某一阶段所表现出来的病因、病位、病变性质以及邪正双方力量消长等方面情况的病理概括，是天、人、病三者之间各种关系的总和。由此可见，“证”反映了一定阶段上疾病的本质，是随时可变的。同一疾病，如果证候不同，采取的治法不同；而不同疾病表现出相同的证候，可采取相同或相近的治法，这就是同病异治，异病同治。病是以致病因素（邪气）为主体，以人体为客体。证则以人体（正气）为主体，以致病因素为客体。病与证之间有着密切关系，一方面，病必须通过证表现出来，证是病的表现形式和归宿；另一方面，病对证则有较强的制约性和规定性，在一种病的全过程中，可以出现若干不同的证。因此，如辨证与辨病相结合，治疗时，坚持辨证论治。
 
 
 
