--- a/ok/ek/ek0zl01-1.0.0.0.0.md
+++ b/ok/ek/ek0zl01-1.0.0.0.0.md
@@ -20,7 +20,7 @@
 
 中医儿科学是中国医学的一个组成部分。古代亦称小方脉、幼科、哑科。祖国医学在儿科疾病方面，很早就有记载。如《素问•奇病论》：“人生而有病巅疾者，病名曰何，安所得之？曰：病名为胎病，此得之在母腹中时，其母有所大惊，气上而不下，精气并居，故令子发为巅疾也。”（张景岳注：巅疾者即癫癎也，内经巅癫通用。）此段很清楚地描述了小儿疾病的遗传因素，讨论了病因病机，说明了怀孕期的保养的重要性。这也为“胎养”、“胎教”和“优生”学说提供了依据。
 
-西汉时期，马王堆三号汉墓出土的秦汉以前的古代医学著作《五十二病方》中，亦有“婴儿病痫”，“婴儿瘛”的记载。都反映了儿科学的萌芽。又《史记•扁鹊列传》载有，“扁鹊……闻秦人爱小儿，即为小儿医”。可见当时对妇婴疾病非常重视，并有了小儿专科医生。（见《汉书•艺文志》）。最早的一部药学《神农本草经》就记载有小儿常见病的惊痫瘈疭（师古曰小儿病也）药物数十种，其中如植物药的蚤休、蛇含，虫类药的僵蚕柞蟬、露蜂房；介类药的龟甲；芳香解毒药的麝香、牛黄等，仍为现代儿科所常用。西晋王叔和著《脉经》（公元三世纪初）就论述了小儿脉法：“小儿脉呼吸八至者平，九至者伤，十至者困”的记载。葛洪（生于三世纪末四世纪初）著《肘后备急方》最早记述了危害小儿最大的“天行发斑疮”（天花）的典型症状与流行，以建武中于南阳击虏所感染，乃呼为虏疮，葛氏并有治豌豆疮方。天花是过去危害儿童的烈性传染病，自《肘后方》以后，对这个病的性质和防治逐渐有了认识。此时已流传着第一部儿科专著——《颅囟经》（按：首骨曰颅，脑盖曰囟，乃因小儿初生颅囟未合，小儿与大人不同，故取以名书）。自《唐书•艺文志》以上皆无此书名，但隋《诸病源候论》（书成于公元610年）卷45中记有：“中古有巫方，立小儿《颅囟经》，以占寿夭，判疾病死生，世所相传，始有小儿方焉。”至《宋史•艺文志》始有师巫《颅囟经》二卷，书中提出小儿为“纯阳之体”的观点，对中医儿科学生理特点方面的论述，提供了理论上的依据。书中论述了脉法及惊、痫、癫、疳、痢的证治，对火丹论述尤详。所以，《隋书•经籍志》所载南朝医书中就有小儿科。
+西汉时期，马王堆三号汉墓出土的秦汉以前的古代医学著作《五十二病方》中，亦有“婴儿病痫”，“婴儿瘛”的记载。都反映了儿科学的萌芽。又《史记•扁鹊列传》载有，“扁鹊……闻秦人爱小儿，即为小儿医”。可见当时对妇婴疾病非常重视，并有了小儿专科医生。（见《汉书•艺文志》）。最早的一部药学《神农本草经》就记载有小儿常见病的惊痫瘈疭（师古曰小儿病也）药物数十种，其中如植物药的蚤休、蛇含，虫类药的殭蚕柞蟬、露蜂房；介类药的龟甲；芳香解毒药的麝香、牛黄等，仍为现代儿科所常用。西晋王叔和著《脉经》（公元三世纪初）就论述了小儿脉法：“小儿脉呼吸八至者平，九至者伤，十至者困”的记载。葛洪（生于三世纪末四世纪初）著《肘后备急方》最早记述了危害小儿最大的“天行发斑疮”（天花）的典型症状与流行，以建武中于南阳击虏所感染，乃呼为虏疮，葛氏并有治豌豆疮方。天花是过去危害儿童的烈性传染病，自《肘后方》以后，对这个病的性质和防治逐渐有了认识。此时已流传着第一部儿科专著——《颅囟经》（按：首骨曰颅，脑盖曰囟，乃因小儿初生颅囟未合，小儿与大人不同，故取以名书）。自《唐书•艺文志》以上皆无此书名，但隋《诸病源候论》（书成于公元610年）卷45中记有：“中古有巫方，立小儿《颅囟经》，以占寿夭，判疾病死生，世所相传，始有小儿方焉。”至《宋史•艺文志》始有师巫《颅囟经》二卷，书中提出小儿为“纯阳之体”的观点，对中医儿科学生理特点方面的论述，提供了理论上的依据。书中论述了脉法及惊、痫、癫、疳、痢的证治，对火丹论述尤详。所以，《隋书•经籍志》所载南朝医书中就有小儿科。
 
 隋唐时代，在太医署内，由“医博士”教授医学，其中专设少小科。促进了儿科专业的发展。当时巢元方的《诸病源候论》中介绍小儿疾病多至6卷，列有255候，对病因病理和证候的阐述较详。如《诸病源候论•脐疮候》认为是一种风证，名之为“脐风”、“四六风”、“撮口风”、“噤口风”等，并为了防止这种严重疾病的发生，认真研究了初生儿的“断脐”法和“裹脐”法，以避免感染。这在当时来说，无疑是一种先进的措施。该书还特别提出了“哺露候”，“丁奚候”由哺食过度，伤于脾胃之诊，与《后汉书》王符传：“婴儿常病，伤于饱也”意同。
 
@@ -30,7 +30,7 @@
 
 宋代，随着科学文化的发展，推动了医学的进步。北宋钱乙，字仲阳（约公元1035—1117年）是当时最享盛名的小儿医，是中医儿科的一代宗师。而其学出于《颅囟经》。（宋代刘跂撰钱乙传，说，“乙始以颅囟方著山东。”）他专业儿科40余年，学术造诣精湛，与之同时的阎季忠赞其治小儿，赅括古今，著有《小儿药证直诀》，朱记尝所治病二十三证，为儿科验案之始。他远承仲景、华佗、孙思邈经验，创立了五脏虚实寒热证治法则，如以八味地黄丸去桂附（名六味地黄丸）治小儿先天不足诸病，注重补益小儿肾阴；以泻心汤单用黄连一味治疗心气实等，都是结合小儿疾病特点因证制方的。尤其对麻疹的症状，诊断和治疗，几种发疹性病的鉴别，以及常见的惊厥，在钱乙以前的医籍中虽有急、慢惊风的名称，但都语而不详，直到钱乙才有精深的论述，惊风和痫证也有了明确的区别。“疳”是小儿另一种常见病，钱乙把“疳”列为脾胃病，他说：“疳皆脾胃病，亡津液之所作也。”在病因、病机、分类和治疗等方面，都有独到的见解。他用五味异功散即四君子加陈皮，治小儿虚冷吐泻。七味白术散即四君子汤加藿香、木香、葛根，治小儿脾虚肌热，虚热作渴，泄泻。又如钱乙的调中丸，实际就是仲景的理中汤原方。他把小儿的生理病理概括为：“脏腑柔弱，易虚易实，易寒易热。”与《灵枢·逆顺肥瘦》“婴儿者，其肉脆，血少气弱”之论若符合符契。这一小儿体质特点，至今仍为儿科医家所重视。
 
-南宋刘昉的《幼幼新书》40卷（公元1150年序行）包括病源形色，禀受诸病，急、慢惊风、斑、疹、麻、痘、五疳辨治，以及眼目、耳、鼻、口唇、喉、齿诸条，对痈疽外伤尤为重视，内容很丰富，保留了一些已佚失了的文献资料，是现存的宋代儿科巨著。此外，不著撰人姓氏《小儿卫生总微论方》20卷（公元1216年宋太医局刻本），自初生以至成童，内外五官诸多疾病的证治，均分门别类，详细收录，所谓“保卫其生，总括精微”。其中还明确指出新生儿脐风撮口是由于断脐不洁所致，与大人因破伤而得的破伤风是同一种疾病。并倡甩烙饼子（烧红的烙铁）烧灼脐带以预防脐风。
+南宋刘昉的《幼幼新书》40卷（公元1150年序行）包括病源形色，禀受诸病，急、慢惊风、斑、疹、麻、痘、五疳辨治，以及眼目、耳、鼻、口唇、喉、齿诸条，对痈疽外伤尤为重视，内容很丰富，保留了一些已佚失了的文献资料，是现存的宋代儿科巨著。此外，不著撰人姓氏《小儿卫生总微论方》20卷（公元1216年宋太医局刻本），自初生以至成童，内外五官诸多疾病的证治，均分门别类，详细收录，所谓“保卫其生，总括精微”。其中还明确指出新生儿脐风撮口是由于断脐不洁所致，与大人因破伤而得的破伤风是同一种疾病。并倡用烙饼子（烧红的烙铁）烧灼脐带以预防脐风。
 
 随着当时对烈性传染病的防治不断深入，董汲著的《小儿斑疹备急方论》钱乙为他写序并校正刊行，实为天花、麻疹专书之始。另外，陈文中的《小儿病源方论》载有传统的育儿方法，其《痘疹方论》对痘疹防治亦有一定的影响。王珪说：“宿州陈君手集婴动摄养，痘疮疹方，详备有法，治证有验，起死回生，端如反掌。”（《泰定养生主论》）其《痘疹方论》系论痘疹的一部专著，在虚实寒热的辨证及治法上均有其独到之处。明代儿科名家薜己深得其奥，特为本书校注，可见其影响之深远。
 
