--- a/ok/ek/ek0zl07-0.4.0.0.0.md
+++ b/ok/ek/ek0zl07-0.4.0.0.0.md
@@ -18,7 +18,7 @@
 
 （1）皮肤针：这是一种浅刺皮肤所用的针，按针数的多少和形式，分为梅花针、七星针。使用前把针具，及叩打部位进行消毒，用右手持针柄，借手腕的力量，在需要治疗的穴位进行叩打，用腕力弹刺，以局部皮肤潮红充血为度。儿科多用在广泛的麻痹，脑炎后遗症及抽风的治疗。应用时，要对针尖进行检査，针尖必须无弯曲。凡皮肤有溃疡者，暂不宜使用皮肤针治疗。
 
-（2）刺四缝法：四缝是经外奇穴，它的位置在食、中、无名指及小指四指中节，是手三阴经所过之处。针刺四缝可以解热除烦，畅通百脉，调和脏腑等。常用于治疗疳疾和小儿厌食证。具体操作方法：皮肤局部消毒后，用三棱针或粗毫针针刺，约一分深，刺后用手挤出黄白色粘液，每日刺二次，直到针刺后不再有黄白色粘液挤出为止。
+（2）刺四缝法：四缝是经外奇穴，它的位置在食、中、无名指及小指四指中节，是手三阴经所过之处。针刺四缝可以解热除烦，畅通百脉，调和脏腑等。常用于治疗疳疾和小儿厌食证。具体操作方法：皮肤局部消毒后，用三棱针或粗毫针针刺，约一分深，刺后用手挤出黄白色粘液，每日刺一次，直到针刺后不再有黄白色粘液挤出为止。
 
 （3）指针刺激法：指针是运用指爪在一定的穴位上进行掐切、弹点、按压、揉运。运用指针疗法的力量，分为强中弱。点法，用指在一定穴位上弹点。揉法，用指端在一定穴位上揉运。按法，用指端在一定穴位上按压。掐法，用指甲在一定穴位上掐之。此种疗法最易为小儿接受。
 
