--- a/ok/rm/rm05.md
+++ b/ok/rm/rm05.md
@@ -1,8 +1,12 @@
 # 第五章 人体各类平衡波动
 
+[TOC]
+
+
+
 前面说过，中医的阴阳平衡指的是各类指标要素在时间上的正常波动和空间上的合理差异，因此人体中包含很多这种波动变化。这是以前教材中没有明确说明的内容，所以这里重点说明一下。
 
-#### 1、形体与气血之间的平衡
+## 1、形体与气血之间的平衡
 
 形体以气血为根本，气血可以为形体组织建立适宜的内在环境、输送营养和排除垃圾。正常情况下，气血的量是在适宜范围内波动的，量偏高的时候，有利于形体组织的生长与修复，量偏低的时候各种生命活动低沉。若气血量长期过低，则皮肉筋骨等形体组织开始出现问题。
 
@@ -10,19 +14,19 @@
 
 > **形气有余，脉气不足死；脉气有余，形气不足生。**
 >
-> 《素问•方盛衰论》...
+> ——《素问•方盛衰论》...
 >
 > 形体如常，脉衰微不甚应指，预后多不良。这是因为脉之微甚，反映脏气的盛衰，脉微欲绝，说明脏气已败，故主死。形体衰弱，脉尚未衰微欲绝，与形体相比，相对有余的，预后多良好。这是因为脉尚有余，脏气未衰，故主生。
 >
 > 《黄帝内经讲解-(十三）脉证逆从》
 
-#### 2、阳气波动与气血之间的关系
+## 2、阳气波动与气血之间的关系
 
 阳气作用于阴液而生气血，各要素皆有平衡。其中阳气虽然重要，但不要走入极端，只强调阳气是错误的。
 
 如前所述暖气的例子，暖气完成供暖功能，需要火、水皆在平衡范围内。水火相对而言，火为阳，有主动性；水为阴，有被动性。调节暖气的输出功率时，只要调节火的大小，水温和蒸汽量即随之增减。火大则水、气皆热，火小则水、气皆寒，这就是阳主而阴从。
 
-> 人与外在自然环境的统一，依靠什么进行适应性调节活动的呢？主要依靠自身的阳气。所以《内经》有“生气通天”之说。“生气”，这是指人体的阳气。姚止庵说：“生气者何？生生之气，阳气也。”又云：“惟人阳气上与天通。”所谓“通”，即相互关连的意思。认为人体阳气的活动能对天气的变化，随时作出应答反应...天热则腠理开，阳气外泄，故汗出而小便少；天寒则腠理闭，阳气内敛，故汗少而小便多，这正是通过阳气的适应性反应实现的。
+> 人与外在自然环境的统一，依靠什么进行适应性调节活动的呢？主要依靠自身的阳气。所以《内经》有“生气通天”之说。“生气”，这是指人体的阳气。姚止庵说：“生气者何？生生之气，阳气也。”又云：“惟人阳气上与天通。”所谓“通”，即相互关连的意思。认为人体阳气的活动能对天气的变化，随时作出应答反应……天热则腠理开，阳气外泄，故汗出而小便少；天寒则腠理闭，阳气内敛，故汗少而小便多，这正是通过阳气的适应性反应实现的。
 >
 > 《黄帝内经讲解-人与自然变化的关系》
 
@@ -34,13 +38,13 @@
 
 人体单纯阳虚则补阳；单纯阴虚则补阴；阴阳两虚则用侧重补阳的甘温之剂，虽侧重补阳，但也兼顾补阴。
 
-> 《内经》强调阴阳关系的协调平衡，并不排斥阳气的主导作用，因为阴和阳两个方面，并非完全处于同等的地位，而是有主有从...
+> 《内经》强调阴阳关系的协调平衡，并不排斥阳气的主导作用，因为阴和阳两个方面，并非完全处于同等的地位，而是有主有从……
 >
-> 肯定阳气的主导作用。这不意味着“贵阳贱阴”，而是在以“阴为基础”的前提下来认识阳气的重要作用。与只重视阳气者自有区别。就临床来看，阳虚者固当扶阳，阴虚者亦当滋阴，这在调整阴阳的治疗过程中是无可非议的。但如果证属阴阳两虚，一般都侧重阳虚而用甘温分剂，《灵枢·终始》说：“阴阳俱不足，补阳则阴竭，泻阴则阳脱，如是者可将以甘药，不可饮以至剂。”
+> 肯定阳气的主导作用。这不意味着“贵阳贱阴”，而是在以“阴为基础”的前提下来认识阳气的重要作用。与只重视阳气者自有区别。就临床来看，阳虚者固当扶阳，阴虚者亦当滋阴，这在调整阴阳的治疗过程中是无可非议的。但如果证属阴阳两虚，一般都侧重阳虚而用甘温分剂，《灵枢•终始》说：“阴阳俱不足，补阳则阴竭，泻阴则阳脱，如是者可将以甘药，不可饮以至剂。”
 >
 > 《黄帝内经讲解-阴阳互根互用的关系》
 
-#### 3、气血总量与分布的波动变化
+## 3、气血总量与分布的波动变化
 
 精为气血之本。脾胃吸收的水谷精微有两个去处，一个是转化为全身的气血消耗使用，另一个是存入脏腑，成为脏腑所藏的精。因此在各脏腑功能正常、脾胃吸收水谷精微的速度一定的前提下，气血总量与脏腑藏精量成反比。气血总量高的时候，脏腑藏精量降低。气血总量低的时候，脏腑藏精量高。
 
@@ -54,15 +58,15 @@
 >
 > 是以圣人陈阴阳，筋脉和同，骨髓坚固，气血皆从。如是则内外调和，邪不能害，耳目聪明，气立如故。
 >
-> 《素问·生气通天论》
+> ——《素问•生气通天论》
 
-> 阴精是阳气的物质基础，阳气要发挥应有的作用，需要阴精的支持，所以阴精要不断地输送精气于全身，以供给阳气的需要，这叫“阴者，藏精而起亟”。阳气对阴精有固摄作用，阴精要藏守于内，需要阳气固密于外，所以阳气要不断敷布于体表，以抗御外邪，固密阴精，这叫“阳者，卫外而为固”
+> 阴精是阳气的物质基础，阳气要发挥应有的作用，需要阴精的支持，所以阴精要不断地输送精气于全身，以供给阳气的需要，这叫“阴者，藏精而起亟”。阳气对阴精有固摄作用，阴精要藏守于内，需要阳气固密于外，所以阳气要不断敷布于体表，以抗御外邪，固密阴精，这叫“阳者，卫外而为固也”。
 >
 > 《黄帝内经讲解-阴精与阳气的主要功能和关系》
 
-<注>:"阴者，藏精而起亟也；阳者，卫外而为固也"，传统上，此处理解阴为阴精，阳为阳气，因解释不通顺，是中医的一个难点。此处的阴应理解为内在脏腑，可藏精，阳理解为外在形体，可保卫脏腑，对应内经的“内为阴，外为阳”比较好。
+<注>：“阴者，藏精而起亟也；阳者，卫外而为固也”，传统上，此处理解阴为阴精，阳为阳气，因解释不通顺，是中医的一个难点。此处的阴应理解为内在脏腑，可藏精，阳理解为外在形体，可保卫脏腑，对应内经的“内为阴，外为阳”比较好。
 
-##### 3.1、一年四季的变化
+### 3.1、一年四季的变化
 
 内经讲春夏养阳，秋冬养阴，就是在天人合一的大背景下，借助自然之力，用最低的成本来完成养阳、养阴的目的。
 
@@ -74,9 +78,9 @@
 
 > 岐伯曰：**春**者天气始开，地气始泄，冻解冰释，水行经通，故**人气在脉**。**夏**者经满气溢，入**孙络受血**，**皮肤充实**。**长夏**者，**经络皆盛**，内**溢肌**中。**秋**者天气始收，**腠理闭塞，皮肤引急**。**冬**者，盖藏**血气在中**。内着**骨髓**，通于**五脏**。是故邪气者，常**随四时之气血而入客**也。至其变化，不可为度，然必从其经气，辟除其邪，除其邪则乱气不生。
 >
-> 《素问-四时刺逆从论篇》
+> ——《素问•四时刺逆从论篇》
 
-> **冬时严寒，万类深藏，君子固密，则不伤于寒，触冒之者，乃名伤寒**耳。其伤于四时之气，皆能为病，以伤寒为毒者，以其最成杀厉之气也。中而即病者，名曰伤寒（2）。不即病者，**寒毒藏于肌肤，至春变为温病，至夏变为暑病**。暑病者，热极重于温也（3）。是以**辛苦之人，春夏多温热病者，皆由冬时触寒所致**，非时行之气也。...
+> **冬时严寒，万类深藏，君子固密，则不伤于寒，触冒之者，乃名伤寒**耳。其伤于四时之气，皆能为病，以伤寒为毒者，以其最成杀厉之气也。中而即病者，名曰伤寒。不即病者，**寒毒藏于肌肤，至春变为温病，至夏变为暑病**。暑病者，热极重于温也。是以**辛苦之人，春夏多温热病者，皆由冬时触寒所致**，非时行之气也。...
 >
 > **从霜降以后，至春分以前，凡有触冒霜露，体中寒即病者，谓之伤寒也。**
 >
@@ -84,21 +88,22 @@
 
 从五脏角度看，春天精化气血由肝主导；夏天气血充养形体，由心主导；秋天气血收隐，由肺主导。冬天精气潜藏，由肾主导。
 
-> **帝曰：藏象何如？岐伯曰：心者，生之本⑴，神之变也(2)；...通于夏气(5)。**
+> **帝曰：藏象何如？**
+> **岐伯曰：心者，生之本，神之变也；……通于夏气。**
 >
-> **肺者，气之本(6)，魄之处也(7)；...通于秋气(9)。**
+> **肺者，气之本，魄之处也；……通于秋气。**
 >
-> **肾者，主蛰，封藏之本（10），精之处也(11)；...通于冬气(14)。**
+> **肾者，主蛰，封藏之本，精之处也；……通于冬气。**
 >
-> **肝者，罢极之本(15)，魂之居也(16)；...通于春气(21)。**...
+> **肝者，罢极之本，魂之居也；……通于春气。**...
 >
 > 肝主疏泄而调畅气机，同时又主升发阳气，促进全身气血的流畅，这本身就具有生养人体之气的作用。
 >
 > 《黄帝内经讲解-五脏功能与形体组织、四时阴阳的关系》
 
-> **五藏者，所以参天地，副阴阳(1)，而连四时，化五节者也(2)。**
+> **五藏者，所以参天地，副阴阳，而连四时，化五节者也。**
 >
-> 《灵枢•本藏》
+> ——《灵枢•本藏》
 
 从人的起居看，春夏应晚睡早起，更多的接触太阳阳气，使体内阳气与太阳阳气同步生长，适度增加运动，让形体组织象自然界的植物生命一样生长、壮大。秋天的时候，应早睡早起，养秋收之气。冬天的时候，应早睡晚起，减少运动，降低气血消耗，使精藏于脏腑。
 
@@ -106,47 +111,47 @@
 
 一年四季，气血的波动环环相扣。春天生发的气血，到了夏天壮大，供形体成长之用。夏天壮大的气血，供秋天收养之用。秋天收养之气血，供冬天藏精之用。冬天所藏之精，再供春天生发气血所用。每一个环节如果出现问题，则既伤害本环节的脏器，又影响下一环节的功能。
 
-> **但天地动静，阴阳鼓击者，各正一气耳（12）。是以彼春之暖，为夏之暑；彼秋之忿，为冬之怒（13）。**...
+> **但天地动静，阴阳鼓击者，各正一气耳。是以彼春之暖，为夏之暑；彼秋之忿，为冬之怒。**...
 
-> **春三月，此谓发陈。天地倶生，万物以荣(1)；夜卧早起，广步于庭，被发缓形，以使志生；生而勿杀，予而勿夺，赏而勿罚，此春气之应，养生之道也(2)。逆之则伤肝，夏为寒变，奉长者少(3)。**
+> **春三月，此谓发陈。天地倶生，万物以荣；夜卧早起，广步于庭，被发缓形，以使志生；生而勿杀，予而勿夺，赏而勿罚，此春气之应，养生之道也。逆之则伤肝，夏为寒变，奉长者少。**
 >
-> **夏三月，此谓蕃秀。天地气交，万物华实(1);夜卧早起，无厌于日；使志无怒，使华英成秀，使气得泄，若所爱在外，此夏气之应，养长之道也(2)。逆之则伤心，秋为康疟，奉收者少，冬至重病（3）。**
+> **夏三月，此谓蕃秀。天地气交，万物华实；夜卧早起，无厌于日；使志无怒，使华英成秀，使气得泄，若所爱在外，此夏气之应，养长之道也。逆之则伤心，秋为康疟，奉收者少，冬至重病。**
 >
-> **秋三月，此谓容平。天气以急，地气以明(1)，早卧早起，与鸡俱兴；使志安宁，以缓秋刑；收敛神气，使秋气平；无外其志，使肺气清，此秋气之应，养收之道也(2)。逆之则伤肺，冬为飧泄，奉藏者少(3)。**
+> **秋三月，此谓容平。天气以急，地气以明，早卧早起，与鸡俱兴；使志安宁，以缓秋刑；收敛神气，使秋气平；无外其志，使肺气清，此秋气之应，养收之道也。逆之则伤肺，冬为飧泄，奉藏者少。**
 >
-> **冬三月，此谓闭藏。水冰地坼，无扰乎阳(1)；早卧晚起，必待日光，使志若伏若匿，若有私意，若已有得；去寒就温，无泄皮肤，使气亟夺，此冬气之应，养藏之道也(2)。逆之伤则肾，春为痿厥，奉生者少(3)。**
+> **冬三月，此谓闭藏。水冰地坼，无扰乎阳；早卧晚起，必待日光，使志若伏若匿，若有私意，若已有得；去寒就温，无泄皮肤，使气亟夺，此冬气之应，养藏之道也。逆之则伤肾，春为痿厥，奉生者少。**
 >
-> 《素问•四气调神大论》
+> ——《素问•四气调神大论》
 
-> **万物之外，六合之内（1），天地之变，阴阳之应，彼春之暖，为夏之暑，彼秋之忿，为冬之怒（2）。四变之动，脉与之上下，以春应中规，夏应中矩，秋应中衡，冬应中权（3）。是故冬至四十五日，阳气微上，阴气微下；夏至四十五日，阴气微上，阳气微下（4）。阴阳有时，与脉为期(5)，期而相失，知脉所分，分之有期，故知死时（5）。**
+> **万物之外，六合之内，天地之变，阴阳之应，彼春之暖，为夏之暑，彼秋之忿，为冬之怒。四变之动，脉与之上下，以春应中规，夏应中矩，秋应中衡，冬应中权。是故冬至四十五日，阳气微上，阴气微下；夏至四十五日，阴气微上，阳气微下。阴阳有时，与脉为期，期而相失，知脉所分，分之有期，故知死时。**
 >
-> 《素问•脉要精微论》
+> ——《素问•脉要精微论》
 
 自然界四时阳气波动，人应顺应这种波动来养阳、养阴，就是“与万物沉浮于生长之门”。逆此波动，则形体之阳、脏腑之阴都养不好，肾精消耗速度快，人易病、早衰、短寿。
 
-> **夫四时阴阳，万物之根本也(1)，所以圣人春夏养阳，秋冬养阴，以从其根，故与万物沉浮于生长之门(2)。逆其根，则伐其本。坏其真矣(3)。故阴阳四时者，万物之终始也，死生之本也，逆之则灾害生，从之则荷疾不起(4)。**
+> **夫四时阴阳，万物之根本也，所以圣人春夏养阳，秋冬养阴，以从其根，故与万物沉浮于生长之门。逆其根，则伐其本。坏其真矣。故阴阳四时者，万物之终始也，死生之本也，逆之则灾害生，从之则荷疾不起。**
 >
-> 《素问•四气调神大论》
+> ——《素问•四气调神大论》
 
-> **凡阴阳之要，阳密乃固(1)，两者不和，若春无秋，若冬无夏，因而和之，是谓圣度(2）。故阳强不能密，阴气乃绝(3），阴平阳秘，精神乃治(4)，阴阳离决，精气乃绝(5)。**
+> **凡阴阳之要，阳密乃固，两者不和，若春无秋，若冬无夏，因而和之，是谓圣度。故阳强不能密，阴气乃绝，阴平阳秘，精神乃治，阴阳离决，精气乃绝。**
 >
-> 《素问·生气通天论》
+> ——《素问•生气通天论》
 
-##### 3.2、一昼夜的波动变化
+### 3.2、一昼夜的波动变化
 
 另外，一昼夜的阳气波动，原理与一年的阳气波动原理差不多，所以人应白天工作，晚上休息。昼夜波动幅度不如四季波动大，所以中医常用四季变化来举例。
 
-> 以一日分为四时，朝则为春，日中为夏，日入为秋，夜半为冬(3)。朝则人气始生，病气衰，故旦慧。日中人气长，长则胜邪，故安。夕则人气始衰，邪气始生，故加。夜半人气入蔵，邪气独居于身，故甚也(4)。...
+> 以一日分为四时，朝则为春，日中为夏，日入为秋，夜半为冬。朝则人气始生，病气衰，故旦慧。日中人气长，长则胜邪，故安。夕则人气始衰，邪气始生，故加。夜半人气入蔵，邪气独居于身，故甚也。...
 >
 > 尽管昼夜阴阳变化的幅度不如四时，但同样具有类似的运动规律。张介宾说：“人身之阴阳，亦与一日四时之气同。故子后则气升，午后则气降，子后则阳盛，午后则阳衰。”
 >
 > 《黄帝内经讲解-正邪消长的昼夜节律》
 
-> **阳气者，一日而主外（1），平旦人气生，日中而阳气隆，日西而阳气已虚，气门乃闭（2）。**
+> **阳气者，一日而主外，平旦人气生，日中而阳气隆，日西而阳气已虚，气门乃闭。**
 >
-> 《素问•生气通天论》
+> ——《素问•生气通天论》
 
-##### 3.3、脉象与气血的关系
+### 3.3、脉象与气血的关系
 
 脉的本质是血液在脉管中的波动情况。血液运行的初始动力是心气，过程又需要宗气的辅助。因此脉象能够体现人体气血的分配以及气血之间的平衡情况。正常的脉象三部九侯都有脉，代表全身内外都有气血在起作用。当各部位气血有波动的时候，在脉象上有对应的变化。比如夏天的时候，气血分布于机体表层多一些，则脉象偏浮一点，轻按的时候脉比较明显，重按稍弱；冬天气血在脏腑多一点，则脉象偏沉一点，轻取稍弱，重按明显。
 
@@ -160,13 +165,13 @@
 
 诊脉的时间，一般选择在清晨日出，未进饮食之时，此时气血在全身的分配最平均。夜晚气血偏于里，白天气血偏于表，饮食后气血偏于脾胃，不同情况下气血各有所偏。所以若在其它时间诊脉，当脉象有些异常的时候，需要判断是正常的气血变化还是异常的气血变化。
 
-> **诊法常以平旦（1），阴气未动，阳气未散(2)，饮食未进，经脉未盛，络脉调匀，气血未乱（3），故乃可诊有过之脉(4)。**
+> **诊法常以平旦，阴气未动，阳气未散，饮食未进，经脉未盛，络脉调匀，气血未乱，故乃可诊有过之脉。**
 >
-> 《素问•脉要精微论》
+> ——《素问•脉要精微论》
 
 人在白天、夏天、运动劳作、外感邪气的时候，气血消耗总量大，偏聚集于外在形体，脉偏浮；夜晚、冬天、休息、五脏患病的时候，气血消耗总量小，偏聚集于内在脏腑，脉偏沉。
 
-##### 3.4、小结
+### 3.4、小结
 
 气血分布的内外波动，分别养脏腑与形体。这对阴阳关系是人体中比较顶级的一个阴阳关系。
 
@@ -180,15 +185,15 @@
 
 > 春温夏热，元气外泄，阴精不足，药宜养阴；秋凉冬寒，阳气潜藏，勿轻开通，药宜养阳。
 >
-> 《神农本草经疏》
+> ——《神农本草经疏》
 
-#### 4、年龄增长的相关波动变化
+## 4、年龄增长的相关波动变化
 
 从人的一生角度看，气血与形体都有波动性。孩童形体幼小，气血也少，但两者相比，气血多于形体，所以活力旺盛、喜动。青壮年，形体长成，气血也充沛，两者配合比较合适。老年气血衰减，形体也随之衰弱，两者相比，气血少于形体需求，所以喜静。这就是人一生的形体、气血波动趋势。
 
 随年龄的增长，气血衰减的主要原因是先天之精越来越少，以肾精为代表的脏腑精气也逐渐减少，供给给形体的气血能量越来越不足，排除邪气的能力就减弱，于是身体中积累的痰饮、淤血等邪气越来越多。正愈虚而邪愈实，人就逐渐衰老，疾病增多、变重。
 
-![img](img/%E4%BC%81%E4%B8%9A%E5%BE%AE%E4%BF%A1%E6%88%AA%E5%9B%BE_16218516681202.png)
+<img src="img/%E4%BC%81%E4%B8%9A%E5%BE%AE%E4%BF%A1%E6%88%AA%E5%9B%BE_16218516681202.png" alt="img" style="zoom: 50%;" />
 
 前面说脏病重于腑病，腑病重于筋脉皮肉病。但是如果把精与神考虑在内的话，精与神的层次还要高于脏。人在孩童时期，天真无邪，神思不乱，所以神足。加上肾精中的先天之精充足，精可补充一身的阴阳。孩童的形体虽未长成，但精、神充足，对身体阴阳失衡的调节能力很强，产生的气血数量超过形体基本需求，所以其生命力很强，活泼好动。
 
@@ -196,13 +201,13 @@
 
 也可以说，精是最好的药物，神是最好的医生。无论脏腑形体何处有虚实失衡，精、神皆可进行调节。精神充足，普通病邪难以深入，人一般无大病，有病也容易治疗。若精、神不足，一旦得病，小病易变大病、大病容易死亡，需要有高明的医生做精细的对证调节，才能治好。如果遇到鲁莽的大夫，胡乱攻补，小则伤身，重则送命。
 
-> 黄帝问曰：余闻古之治病，惟其移精变气...岐伯对曰：...此恬淡之世，邪不能深入也。...
+> 黄帝问曰：余闻古之治病，惟其移精变气……岐伯对曰：……此恬淡之世，邪不能深入也。...
 >
-> 当今之世不然，忧患缘其内，苦形伤其外...内至五脏骨髓，外伤空窍肌肤，所以小病必甚，大病必死。...
+> 当今之世不然，忧患缘其内，苦形伤其外……内至五脏骨髓，外伤空窍肌肤，所以小病必甚，大病必死。...
 >
-> 上古...理色脉而通神明，....所以远死而近生...。中古之治病...标本已得，邪气乃服。...暮世之病也...治不本四时，不知日月，不审逆从...粗工凶凶，以为可攻，故病未已，新病复起。
+> 上古……理色脉而通神明，……所以远死而近生……。中古之治病……标本已得，邪气乃服。……暮世之病也……治不本四时，不知日月，不审逆从……粗工凶凶，以为可攻，故病未已，新病复起。
 >
-> 《素问-移精变气篇》
+> ——《素问•移精变气篇》
 
 青少年的时候，精、神充足，需要医药的情况相对少；中老年，精、神衰弱，需要更多医药来辅助补充调节；到晚年，精神衰竭，单凭医药就无能为力了。由此可见，积精全神才是健康长寿的根本。
 
@@ -212,12 +217,11 @@
 
 ## 题目
 
-1. 阳主阴从、阳气为主导的含义是水火在------的前提下，火起主导作用。
+1. 阳主阴从、阳气为主导的含义是水火在 __ 的前提下，火起主导作用。
 
-2. 劳作时，消耗的气血总量大，分布为形体气血偏多而脏腑偏少，有利于-----健康，使人的皮肤致密、肌肉结实、血脉通畅，即为养阳；休息时，消耗的气血总量小，分布为形体气血偏少而脏腑偏多，有利于脏腑化物、------等后勤保障工作，即为养阴。
+2. 劳作时，消耗的气血总量大，分布为形体气血偏多而脏腑偏少，有利于 __  __ 健康，使人的皮肤致密、肌肉结实、血脉通畅，即为养阳；休息时，消耗的气血总量小，分布为形体气血偏少而脏腑偏多，有利于脏腑化物、 __  __ 等后勤保障工作，即为养阴。
 
-3. 自然界四时阳气波动，人应顺应这种波动来养阳、养阴，就是“与万物沉浮于生长之门”。逆此波动，则形体之阳、五脏之阴都养不好，-----消耗速度快，人易病、早衰、短寿。
+3. 自然界四时阳气波动，人应顺应这种波动来养阳、养阴，就是“与万物沉浮于生长之门”。逆此波动，则形体之阳、五脏之阴都养不好， __  __ 消耗速度快，人易病、早衰、短寿。
 
-4. 随着年龄的增长，人体的身体是一个----虚----实的过程，治病的大原则是扶-----祛-------。
+4. 随着年龄的增长，人体的身体是一个 __ 虚 __ 实的过程，治病的大原则是扶 __  __ 祛 __  __ 。
 
-   
