update ok/fjx/fjx04-0.9.0.0.0.md. 本方去牛膝、、改为， 舌绛等正  “正”改为“证” 〈《成方便读》）  〈改为（

--- a/ok/fjx/fjx04-0.9.0.0.0.md
+++ b/ok/fjx/fjx04-0.9.0.0.0.md
@@ -10,6 +10,6 @@
 
 如系实火甚牙痛，方中可酌加苦寒泄热之大黄、黄芩、黄连或与凉血活血的丹皮、赤芍同用，其效更著。急性口疮、舌疮而见舌质红绛而干，或见镜面舌等胃液不足者，可加沙参、石斛、玉竹等以养阴生津。此外糖尿病，证属中消（胃热伤阴）也可用本方化裁。
 
-本方去牛膝、加玄参，熟地改用细生地，方名加减玉女煎（《温病条辨》)，主治温病气血俱热，口渴，脉数，舌绛等正。用石膏、知母清气退热，生地、麦冬凉血生津，玄参壮水制火，并可预防咽痛失血等症发生。方中去牛膝、熟地而用细生地，这是因为牛膝性主下行，熟地质腻滞，两味都是下焦药，与本病不合，故减去不用，用细生地是为了加强凉血清热之效，又不滞腻且具流通之性的缘故。本方如再加生牡蛎、生白芍、磁石滋阴潜阳，也可用治牙痛。
+本方去牛膝，加玄参，熟地改用细生地，方名加减玉女煎（《温病条辨》)，主治温病气血俱热，口渴，脉数，舌绛等证。用石膏、知母清气退热，生地、麦冬凉血生津，玄参壮水制火，并可预防咽痛失血等症发生。方中去牛膝、熟地而用细生地，这是因为牛膝性主下行，熟地质腻滞，两味都是下焦药，与本病不合，故减去不用，用细生地是为了加强凉血清热之效，又不滞腻且具流通之性的缘故。本方如再加生牡蛎、生白芍、磁石滋阴潜阳，也可用治牙痛。
 
-〔方论选录〕张秉成：“夫人之真阴充足，水火均平，决不致有火盛之病。若肺肾真阴不足，不能濡润于胃，胃汁干枯，一受火邪，则燎原之势而为似白虎之证矣。方中熟地、牛膝以滋肾水，麦冬以保肺金，知母上益肺阴，下滋肾水，能制阳明独胜之火。石膏甘寒质重，独入阳明，清胃中有余之热。虽然理虽如此，而其中熟地一味，若胃火炽盛者，尤宜酌用之，即虚火一证，亦改用生地为是。”〈《成方便读》）
+〔方论选录〕张秉成：“夫人之真阴充足，水火均平，决不致有火盛之病。若肺肾真阴不足，不能濡润于胃，胃汁干枯，一受火邪，则燎原之势而为似白虎之证矣。方中熟地、牛膝以滋肾水，麦冬以保肺金，知母上益肺阴，下滋肾水，能制阳明独胜之火。石膏甘寒质重，独入阳明，清胃中有余之热。虽然理虽如此，而其中熟地一味，若胃火炽盛者，尤宜酌用之，即虚火一证，亦改用生地为是。”（《成方便读》）
