--- a/ok/wk/wk14-0.6.0.0.0.md
+++ b/ok/wk/wk14-0.6.0.0.0.md
@@ -48,7 +48,7 @@ l.先天性水疝：阴囊肿大呈圆形或长圆形，偏坠一侧，触之有
 
 1.熏洗法，水疝洗药方加水5000毫升，热熏，待温后洗，并浸泡。每次30分钟，每日2~3次。有外伤史者，上方加苏木30克、土鳖虫15克。
 
-2.熨法：用小茴香、橘核各120克，研成粗末，炒热，装布袋热熨，每次30分钟，每日2~3次。下次再用时仍需炒热，可连续用3~5天再换。
+2.熨法：用小茴香、橘核各120克，研成粗末，炒热，装布袋热熨，每次30分钟，每日2~3次，下次再用时仍需炒热，可连续用3~5天再换。
 
 3.抽水：局部消毒，用注射器穿刺抽去水液。
 
