update ok/wk/wk03.md. 电子版原文有“以及病锃长短，病情轻重”，应为“以及病程长短，病情轻重”，电子版已改。

--- a/ok/wk/wk03.md
+++ b/ok/wk/wk03.md
@@ -60,7 +60,7 @@
 
 5.问饮食：疮疡患者，饮食如常者，病轻，预后佳。病久而不思饮食者，为脾胃已衰病情较重，或疮疡病势进展。腹痛患者，食后痛减，为脾胃虚；食后痛增者，为气滞血瘀或积食。口苦者，肝胆有热；嗳腐酸臭者，胃有宿食；口内甘腻者，脾虚湿盛。
 
-6.问旧病：主要询问有无慢性疾患或传染性疾病的接触史。肺痨患者所患瘰疬或痔瘘，治疗多困难。疮疡患者，伴有消渴病，病情多顽固难愈。不少卒腹痛是慢性病的急性发作。如溃疡病急性穿孔，应问有无慢性胃病史，以及病锃长短，病情轻重。
+6.问旧病：主要询问有无慢性疾患或传染性疾病的接触史。肺痨患者所患瘰疬或痔瘘，治疗多困难。疮疡患者，伴有消渴病，病情多顽固难愈。不少卒腹痛是慢性病的急性发作。如溃疡病急性穿孔，应问有无慢性胃病史，以及病程长短，病情轻重。
 
 7.问月经：外科内服药，一般多有行气、活血、通经之品，有碍于妊娠和月经，临证时应该问清楚。此外，有些外科病与月经有直接关系，如月经疹，每逢经前出疹，经后好转。一般有三种表现：痛经疹，痛经伴有面部、四肢发红斑、风团样疹，月经后好转；粘膜溃疡，口腔、外阴等处在经前出现溃疡疼痛，经后好转；紫癜，经前出现紫癜，经后好转。
 
@@ -90,7 +90,7 @@
 
 芤脉：为失血之候，肿疡见之，其人素有亡血之证。
 
-总之，如清代陈士铎所说：“有余之脉，宜现于未溃之先，而不宜现于已溃之后；不足之脉，宜现于已溃之后，而不宜现于未溃之先。”因为未溃之时，邪实正盛，气滞血瘀，为常态，若见不足之虚、弱、细、缓等脉，则为脉证不符，治疗困难。已溃之后，毒随脓泄，气血大衰，正气不足，若见有余之脉，如浮、洪、滑、数，则亦是脉证不符，是邪盛气滞难化，治疗亦困难，预后较差。虽然如此，各脉如无断续，尚可治疗。若见到结、促、代、散之脉，更属危象。在肿疡阶段，因剧痛，气滞偶一见之，尚不能定为坏证；若溃后，久见结代，绝非佳兆，乃真元不续，药力难以解救。
+总之，如清代陈士铎所说：“有余之脉，宜现于未溃之先，而不宜现于已溃之后；不足之脉，宜现于已溃之后，而不宜现于未溃之先”。因为未溃之时，邪实正盛，气滞血瘀，为常态，若见不足之虚、弱、细、缓等脉，则为脉证不符，治疗困难。已溃之后，毒随脓泄，气血大衰，正气不足，若见有余之脉，如浮、洪、滑、数，则亦是脉证不符，是邪盛气滞难化，治疗亦困难，预后较差。虽然如此，各脉如无断续，尚可治疗。若见到结、促、代、散之脉，更属危象。在肿疡阶段，因剧痛，气滞偶一见之，尚不能定为坏证；若溃后，久见结代，绝非佳兆，乃真元不续，药力难以解救。
 
 2.触诊，触诊是用手触摸病变的局部，从而辨别疮疡的性质了解疼痛的部位以诊断疾病的一种方法，在外科诊断学中占有重要地位。
 
