update ok/gl/gl05-0.3.1.0.0.md. 根据扫描版改正错字。

--- a/ok/gl/gl05-0.3.1.0.0.md
+++ b/ok/gl/gl05-0.3.1.0.0.md
@@ -14,7 +14,7 @@
 
 #### （二）问个人生活习惯和生活状况
 
-个人的起居习惯，饮食偏嗜，学习、工作、家庭环境的逆顺，对某些疾病有直接影响。如平素喜暖怕冷者，多为阴气偏盛体质，其病则易于偏虚偏寒；平素喜凉怕热，多为阳盛体质，其病则易于偏实、偏热。素喜酒茶者，病多痰湿。平素体弱，气血不充，病多属虚；素体壮盛，气血充实，病多属实。某些疾病，如情志疾病，即与生活环境的不良影响，心情苦闷有关。明•李梃《医学入门》说：“当问所处顺否，所处顺则性情和而气血易调；所处逆，则气血怫郁”。这些都是问诊时应注意的内容。
+个人的起居习惯，饮食偏嗜，学习、工作、家庭环境的逆顺，对某些疾病有直接影响。如平素喜暖怕冷者，多为阴气偏盛体质，其病则易于偏虚偏寒；平素喜凉怕热，多为阳盛体质，其病则易于偏实、偏热。素喜酒茶者，病多痰湿。平素体弱，气血不充，病多属虚；素体壮盛，气血充实，病多属实。某些疾病，如情志疾病，即与生活环境的不良影响，心情苦闷有关。明•李梴《医学入门》说：“当问所处顺否，所处顺则性情和而气血易调；所处逆，则气血怫郁”。这些都是问诊时应注意的内容。
 
 #### （三）问过去病史
 
